--- a/sub_31.html
+++ b/sub_31.html
@@ -16,10 +16,10 @@
 	<script src="js/script2.js?ver202502"></script>
 <style>
 	:root {
-		--main-color: #A6B060;
+		--main-color: #96825D;
 		--text-color-small: #fff;
-		--text-color-title: #275D2C;
-		--text-color-title2: #275D2C;
+		--text-color-title: #E0CEAB;
+		--text-color-title2: #978257;
 		--box-bg-color: #FAF3F5;
 		--box-text-color: #DD6286;
 	}
@@ -75,6 +75,17 @@
 	gap: 0.5rem;
 	margin-top: 2rem;
 }
+.qr {
+	display: flex;
+	justify-content: center;
+	gap: 1rem;
+	margin-top: 1rem;
+}
+.qr div {
+	width: 10rem;
+	text-align: center;
+	font-size: 1.6rem;
+}
 @media (max-width: 767px) {
     .article-header-text h2 {
         font-size: 3rem;
@@ -96,19 +107,19 @@
 					<div class="article-header-text">
 						<span>청년농UP 청년꿈UP</span>
 						<h2>
-							꿈을 지키는 <br>초보 농부의 여정
+							첼리스트에서 농부로,<br>인생의 선율을 바꾸다
 						</h2>
 						<!-- <h4>부토 오너 셰프</h4> -->
-						<h3>구름하늘 딸기 농장 <b>강우범 대표</b></h3>
+						<h3>농부와 첼리스트 <b>임보람 대표</b></h3>
 						<div class="article-meta">
 							<span class="b">글</span>
 							<span>장희주</span>
 							<span class="pipe">ㅣ</span>
 							<span class="b">사진제공</span>
-							<span>강우범</span><br>
+							<span>임보람</span><br>
 							<!-- <span class="pipe">ㅣ</span> -->
 							<span class="b">자료</span>
-							<span>똑똑청년농부_농촌지원정책과 김성섭 농업연구사</span>
+							<span>똑똑청년농부</span>
 						</div>
 					</div>
 					<div class="article-header-image">
@@ -123,8 +134,22 @@
 			<div class="article-body-wrap">
 				<div class="article-prologue">
 					<p>
-						농부의 길은 결코 평탄하지 않았다. 첫해부터 기록적인 폭우에 농장이 잠기면서 희망까지 한순간에 휩쓸려갔다. 그러나 포기 대신 다시 일어서기를 택한 청년농부 강우범 대표. 그는 이웃의 손길과 스스로 세운 분명한 목표를 붙잡고 흔들림 없이 버텼다. 흙탕물 속에서도 꺼지지 않은  그 꿈 하나가 오늘도 강우범 대표의 희망을 자라게 한다. 
+						음악가의 길에서 농부의 길로, 임보람 대표는 인생의 무대를 바꾸었지만 ‘진심’이라는 악보는 한 번도 바뀌지 않았다. 흙 위에서 울리는 그녀의 첼로 선율은 오늘도 젊은 농부들의 마음에 잔잔한 울림을 남긴다.
 					</p>
+				</div>
+				<div class="qr">
+					<div>
+						<figure>
+							<img src="contents/sub_31_qr_blog.png">
+						</figure>
+						<span>블로그</span>
+					</div>
+					<div>
+						<figure>
+							<img src="contents/sub_31_qr_yt.png">
+						</figure>
+						<span>유튜브</span>
+					</div>
 				</div>
 				<div class="article-text">
 					<div class="article-image">
@@ -135,13 +160,22 @@
 						</div>
 					</div>
 					<h5>
-						예상치 못한 재난과 마주하다
+						무대 위의 첼리스트, 들판의 농부로 서다
 					</h5>
 					<p>
-						굴다리 너머에서 이웃 농가 사장의 다급한 외침이 들려왔다. 이미 반쯤 잠긴 굴다리 안에는 트럭 한 대가 오도 가도 못한 채 갇혀 있었다. 한창 일하던 중, 발목부터 차오르던 물에 서둘러 집으로 향했던 강우범 대표는 쏟아지는 빗줄기가 심상치 않아 다시 하우스로 발걸음을 돌린 참이었다. 그러나 농장으로 이어지는 길은 모두 물에 잠겨 있었다. 그가 할 수 있는 일이라고는 멀리서 점점 잠겨가는 하우스를 바라보는 것뿐이었다. 2022년 7월 14일, 논산에 최고 700mm의 기록적인 폭우가 쏟아진 날이었다.
+						임보람 대표는 한때 독일에서 유학하며 첼로를 전공한, 음악가를 꿈꾸던 청년이었다. 무대 위의 조명을 받으며 첼로를 연주하던 그녀의 삶은 자유롭고 열정적이었다. 그러나 뜻밖의 일이 찾아왔다. 가정 형편이 악화되면서 학업을 중단하고 귀국해야 했던 것이다. 
 					</p>
 					<p>
-						다음날 물이 빠진 뒤에야 들어간 하우스는 전쟁터보다 더 처참했다. 그 모습을 보고 강우범 대표는 그저 헛웃음을 지을 수밖에 없었다. 최악의 상황은 육묘장에 애지중지 키우던 4만 주의 모종이 모두 물에 잠겨 휩쓸려간 일이었다. 여름철 수확이 없어 그나마 기대했던 건 모종 판매였지만, 그 꿈도 한순간에 휩쓸려 내려갔다. 집기와 기계들은 흙탕물에 잠겨 고장이 나 있었고, 미리 주문해둔 하우스 비닐과 비료 같은 소모품들도 진흙 속에 뒤엉켜 있었다. 하우스 전체는 마치 땅이 통째로 무너져 내린 듯 진흙투성이였다. 어디서부터 손을 대야 할지조차 가늠할 수 없었다. ‘하우스 안에 있으면 위험하다’는 동네 어르신들의 만류에, 그는 난장판이 된 하우스를 뒤로한 채 발걸음을 돌릴 수밖에 없었다.
+						귀국 후 그녀는 음악에 대한 미련을 내려놓고 새로운 길을 모색했다. 대학을 졸업하고, 여러 직장과 인턴을 전전하며 또 다른 가능성을 찾아 나섰다. 하지만 그것도 오래가지 않았다. 도시의 빠른 리듬은 오히려 숨이 막혔고, 마음 한켠의 공허함은 점점 커져만 갔다. 
+					</p>
+					<p>
+						그녀의 인생은 충남 태안의 부모님 댁으로 돌아가면서 전환점을 맞았다. 당시 서리태 농사를 시작한 어머니는 “농업도 잘만 하면 경영이 되고 기업이 된다”며 농업의 비전을 강조했다. 악기를 다룬다고 손이 다칠까봐 칼로 과일도 몇 번 깎아본 적 없던 임보람 대표에게 그 말은 황당하게 들렸다. 하지만 어머니의 확신은 단단했고, 그 진심이 묘하게 마음에 남았다. 
+					</p>
+					<p>
+						그렇게 시작된 우연은 곧 운명이 됐다. 어머니의 권유로 태안군농업기술센터를 찾은 임보람 대표는 4-H 영농교육에 참여하게 된다. 젊은 농업인들이 모이는 자리라 괜스레 곱게 차려입고 갔던 날, 벚꽃이 흩날리던 봄날의 풍경이 아직도 생생하다. 그날, 충남농업기술원 강의실에서 그녀는 처음으로 ‘그’를 만났다. 한국농수산대학 버섯학과를 졸업하고 20년째 버섯농사를 이어가던 젊은 후계농, 지금의 남편이었다.
+					</p>
+					<p>
+						첫 만남부터 두 사람은 강한 끌림을 느꼈다. 농부의 삶에 진심인 그의 모습은, 긴 방황을 끝내고 싶던 임보람 대표에게 한 줄기 빛처럼 다가왔다. 그 인연은 1년 만에 결혼으로 이어졌고, 그렇게 첼리스트는 농부의 아내로서, 새로운 삶의 무대 위에 섰다.
 					</p>
 					<div class="article-image">
 						<div class="article-image-container">
@@ -151,19 +185,19 @@
 						</div>
 					</div>
 					<h5>
-						농부의 삶을 배워가며
+						농부의 며느리, 마케팅 팀장이 되다
 					</h5>
 					<p>
-						자연재해의 무서움은, 아무리 성실히 일해도 막을 수 없는 순간이 있다는 사실이었다. 도시 직장인에서 초보 농부가 된 강우범 대표는 그제야 농부의 삶이 얼마나 예측 불가능한지를 뼈저리게 실감했다.
+						결혼 후 임보람 대표는 시부모님과 남편이 함께 운영하던 표고버섯 농장에 합류했다. 시부모님과 남편이 생산을 맡았다면, 그녀는 경영학 전공과 유통관리사 자격증을 바탕으로 마케팅을 담당하기로 했다. 그동안 농장의 버섯은 대부분 도매로만 판매되고 있었지만, ‘이제 농사도 브랜딩이 필요하다’ 는 생각에서였다. 그렇게 임보람 대표는 스스로 ‘마케팅 팀장’ 을 자처하며 직거래 시장 개척에 나섰다.
 					</p>
 					<p>
-						일주일 뒤, 긴 장마가 끝나고 햇살이 다시 비치자 본격적인 복구 작업이 시작됐다. 하우스 안은 여전히 진흙투성이였고, 비닐과 파이프는 손쓸 수 없이 망가져 있었다. 그러나 주변 어르신들은 원망 한 마디 없이 묵묵히 손을 움직이며 복구에 나섰다. 그들의 모습을 바라보며 강우범 대표의 마음도 조금씩 추스러졌다. 
+						농장은 신도시 근교에 자리해 자연스럽게 젊은 소비층과 맞닿아 있었다. 임보람 대표는 이들을 주요 고객층으로 삼고, 지역 온라인 카페에 직접 홍보 글을 올리며 적극적인 마케팅에 나섰다. 동시에 젊은 감각을 더해 상품 패키지를 새롭게 디자인했다. 초기에는 배송비를 받지 않고 무료 배달을 진행하며 단골 고객을 확보했다. 단기적으로는 손해처럼 보였지만, 고객의 신뢰를 얻는 데 큰 도움이 됐다.
 					</p>
 					<p>
-						이웃의 도움은 무엇보다 큰 힘이 됐다. 바쁜 와중에도 강우범 대표의 하우스를 들러 해야 할 일을 짚어주고, 위험한 순간에는 몸소 나서서 말려주었다. 덕분에 그는 수해 신고와 복구 지원 신청 등 꼭 필요한 절차들을 놓치지 않고 진행할 수 있었다.
+						아이디어는 거기서 멈추지 않았다. 신혼 초 즐겨 시켜 먹던 치킨집의 ‘쿠폰 증정’에서 착안해, 10장을 모으면 건표고·표고분말·제철 농산물 등으로 교환할 수 있는 적립 이벤트를 도입했다. 고객 만족도는 높았고, 자연스레 재구매율도 꾸준히 늘어났다.
 					</p>
 					<p>
-						무더위 속에서 흘린 땀은 마치 또 다른 폭우처럼 쏟아졌다. 그러나 신기하게도, 하나씩 정리될수록 마음은 오히려 가벼워졌다. 포기하지 않고 끝내 해냈다는 성취감이 서서히 차올랐기 때문이다. 홍수가 모든 것을 휩쓸어 간 것처럼 보였지만, 땅과 물이 남아 있는 한 농사는 계속될 수 있다는 믿음이 다시 그의 가슴에 자리 잡았다.
+						하지만 마케팅만 앞선다고 해서 판매가 보장되는 것은 아니었다. 임보람 대표는 그래서 ‘좋은 제품을 정당한 가격에, 진심으로 알리자’는 원칙을 세웠다. 표고버섯은 지하 암반수로 재배하고, 중국산 배지 대신 100% 국산 참나무 톱밥을 사용했다. 그 진정성은 소비자에게 그대로 전해졌고, 그녀가 마케팅에 참여한 지 1년 만에 직거래 비율은 0%에서 30%로 늘었다. 20년 동안 도매 일변도였던 농장에 새로운 바람이 불기 시작한 것이다.
 					</p>
 					<div class="article-image">
 						<div class="article-image-container">
@@ -173,13 +207,16 @@
 						</div>
 					</div>
 					<h5>
-						쓰러져도 다시, 땅 위에 서다
+						꾸준한 기록이 ‘우리만의 색깔’을 만든다
 					</h5>
 					<p>
-						그러나 9월, 두 번째 작기를 준비하기 위해 강우범 대표 앞에는 여전히 가장 큰 난관이 남아 있었다. 바로 ‘돈’, 생계의 문제였다. 귀농 1년 차 청년 농업인에게 넉넉한 여유자금은 있을 리 없었다. 모아둔 비상금으로 모종 구입비는 충당했지만, 고장 난 기계 수리비와 떠내려간 소모품 구입비, 그리고 생활비까지 감당하기엔 턱없이 부족했다. 땀으로 해결할 수 있는 일은 많았지만, 돈 문제는 수익이 나지 않으면 풀리지 않았다. 더구나 그가 선택한 작물은 최소 4개월은 지나야 수확할 수 있는 겨울 딸기였다.
+						농사에 뛰어드는 청년 농업인 후배들에게 임보람 대표는 ‘블로그’나 ‘유튜브’처럼 소비자와 꾸준히 소통할 수 있는 채널을 꼭 가지라고 조언한다. 그녀는 단골 고객, 더 나아가 ‘팬 층’이 형성되면 농산물 직거래는 자연스럽게 성공으로 이어진다고 믿는다. 농장에 호감을 가진 사람이 많아질수록 농산물에 대한 신뢰도 함께 깊어지기 때문이다. 임보람 대표는 이제 무농약 인증은 기본이며, 그보다 더 중요한 것은 소비자가 직접 눈으로 확인할 수 있는 ‘보여지는 인증’이라고 말한다. 농부 가족의 소소하지만 즐거운 일상을 통해 안전한 농산물이 어떻게 만들어지는지를 보여주는 것,
 					</p>
 					<p>
-						이때 청년창업농 육성 사업 영농정착지원금은 단순한 지원이 아니라 생존의 마지노선이었다. 생활비를 안정적으로 충당할 수 있었기에 포기하지 않고 버틸 수 있었다. 하루는 편의점에서 아이스크림을 사 먹으며 “나라에서 힘내라고 용돈도 줘서 아이스크림도 먹네”라고 농담을 건네자, 아내도 미소를 지었다. 그 뒤로 부부는 지원금을 사용할 때면 “나라에서 사주는 비료 사러 가자”, “나라에서 사주는 밥 먹으러 가자”는 농담을 주고받았다. 작은 농담이었지만, 그 안에는 정부가 청년 농업인을 응원하고 있다는 든든한 감각이 담겨 있었다.
+						그것이야말로 소비자에게 가장 진실하게 와닿는 신뢰의 증거라 생각한다. 그녀 역시 신혼 초부터 블로그를 운영하며 농장의 일상과 가족 이야기를 꾸준히 기록해 왔다. 그 속에는 농부의 하루, 아이들의 웃음, 그리고 버섯 하우스 옆에서 켜는 첼로 선율이 담겨 있다. 그녀의 일상은 어느새 하나의 스토리텔링이 되었고, 농장은 감성 브랜드로 자리 잡았다. 무엇보다 이 꾸준한 기록은 예상치 못한 기회를 불러왔다. 유명 셰프 강레오, 이연복과 함께 방송 프로그램 ‘유쾌한 삼촌’에 출연하며 농장의 이름이 전국에 알려진 것이다. 
+					</p>
+					<p>
+						임보람 대표의 이야기는 단순한 홍보가 아니라, ‘농촌의 아름다움’을 보여주는 창이다. 그래서 그녀는 여전히 첼로를 놓지 않는다. 들깨밭 앞, 매실나무 아래에서 연주를 이어가며 자연과 음악이 만나는 순간을 영상으로 담아낸다. 이렇게 차곡차곡 쌓인 기록들은 어느새 농장의 색깔이 되었고 그 안에서 자라나는 표고버섯처럼 농부의 손끝에서 피어난 또 하나의 예술이 됐다. 
 					</p>
 					<div class="article-image">
 						<div class="article-image-container">
@@ -188,42 +225,23 @@
 							</figure>
 						</div>
 					</div>
-					<p>
-						강우범 대표를 지탱한 또 하나의 힘은 ‘목표’였다. 막연한 바람이 아닌, 반드시 이루고자 한 구체적 목표였다. 청년창업농 육성 사업에 지원하면서 세운 사업계획서는 매출 경로와 차별화 전략을 세분화하고 문서화한 결과물이었다. 그것은 그의 방향을 잡아주는 든든한 나침반이 되었다. 지금도 그는 그 계획서를 꺼내 읽으며 수정하고, 작은 목표를 달성할 때마다 성취감을 얻는다.
-					</p>
-					<p>
-						단순히 성공을 꿈꾸는 것과, 구체적인 실행 계획을 갖는 것은 큰 차이가 있었다. 그 차이가 있었기에 그는 좌절 대신 다시 일어설 수 있었다. 무엇보다 해야 할 길이 정리되어 있었고, 방향이 확실했기에 포기하지 않고 다시 마음을 다잡을 수 있었다.
-					</p>
-					<div class="article-image">
-						<div class="article-image-container">
-							<figure>
-								<img src="contents/sub_31_image_5.png">
-							</figure>
-						</div>
-					</div>
 					<blockquote class="quote-normal">
-						강우범 대표를 지탱한 또 하나의 힘은 ‘목표’였다. 막연한 바람이 아닌, 반드시 이루고자 한 구체적 목표였다. 청년창업농 육성 사업에 지원하면서 세운 사업계획서는 매출 경로와 차별화 전략을 세분화하고 문서화한 결과물이었다. 
+						임보람 대표의 이야기는 단순한 홍보가 아니라, ‘농촌의 아름다움’을 보여주는 창이다. 그래서 그녀는 여전히 첼로를 놓지 않는다.  들깨밭 앞, 매실나무 아래에서 연주를 이어가며 자연과 음악이 만나는 순간을 영상으로 담아낸다.
 					</blockquote>
 					<h5>
-						꺼지지 않는 꿈
+						우리가 꿈꾸는 농원, 생산을 넘어 모두에게 열린 힐링의 공간으로
 					</h5>
 					<p>
-						두 달간의 구슬땀 끝에 가을이 찾아왔다. 강우범 대표의 하우스는 언제 침수되었냐는 듯 정리되었고, 새 모종 정식을 기다리고 있었다. 이번 일을 계기로 강우범 대표는 더 철저히 소독하고 준비하며, 다음 작기에 대한 새로운 기대와 설렘을 품게 됐다.
+						임보람 대표 부부의 꿈은 단순한 생산 농장이 아니라 ‘모두의 쉼터가 되는 농원’이다. 도시민들이 주말이면 캠핑과 체험을 즐기고, 믿을 수 있는 먹거리를 직접 보고 구매할 수 있는 공간. 아이들은 흙 위에서 뛰놀고, 어른들은 첼로 연주와 음악회로 휴식을 얻는 곳. 그 풍경이 바로 부부가 그리는 농원의 미래다. 
 					</p>
 					<p>
-						혹독한 경험은 강우범 대표에게 오히려 자신감을 남겼다. 앞으로 어떤 위기가 닥쳐도 차분히 헤쳐 나갈 수 있으리라는 믿음, 그리고 쉽게 흔들리지 않을 자신감이었다.
-					</p>
-					<p>
-						‘아무것도 모르고 열정만 가득할 때 이런 일을 겪은 게 차라리 다행이었다.’ 오히려 강우범 대표는 그때의 일을 이렇게 회상한다. 그만큼 이겨낸 뒤에는 다시 힘들 때 꺼내 쓸 수 있는 용기가 되어주기 때문이다.
-					</p>
-					<p>
-						그의 최종 목표는 ‘성공한 청년농부’다. 지금도 그는 그 목표를 향해 한 걸음씩 나아가고 있다. 이는 더 이상 먼 꿈이 아니다. 땀과 희망이 켜켜이 쌓여, 오늘도 현실 속에서 조금씩 자라나고 있다. 
+						결혼 10년 차, 네 아이의 엄마이자 청년농부로서 그녀는 여전히 도전의 길 위에 있다. 음악처럼 농사를 짓고, 흙처럼 단단하게 하루를 쌓아가는 임보람. 그녀의 삶은 오늘도 이렇게 말하고 있다. ‘젊기 때문에 도전할 수 있고, 사랑하기 때문에 이 길을 걷는다.’ 
 						<i class="icon_last"></i>
 					</p>
 					<div class="article-image">
 						<div class="article-image-container">
 							<figure>
-								<img src="contents/sub_31_image_6.png">
+								<img src="contents/sub_31_image_5.png">
 							</figure>
 						</div>
 					</div>
