--- a/sub_32.html
+++ b/sub_32.html
@@ -16,9 +16,9 @@
 	<script src="js/script2.js?ver202502"></script>
 <style>
 	:root {
-		--main-color: #279577;
+		--main-color: #4F76A2;
 		--text-color-small: #000;
-		--text-color-title: #E0823B;
+		--text-color-title: #EB6042;
 		--text-color-title2: #706F70;
 	}
 
@@ -205,13 +205,13 @@
 					</div>
 					<div class="article-header-text">
 						<h2>
-							지속 가능한 미래를 디자인하는 사람들
+							인류의 건강한 미래를 설계하는 숨은 주역들
 						</h2>
 						<h3>
-							바이오 플라스틱 디자이너 & 리사이클링 코디네이터
+							유전체 분석가 & 바이오 데이터 분석가
 						</h3>
 						<p>
-							우리가 무심코 버린 쓰레기는 지구를 위협하고, 결국 다시 우리의 삶으로 되돌아온다. 그렇게 쌓이고 흘러간 문제들이 이제는 우리 앞에 마주 서며 변화를 요구하고 있다. 버리던 시대에서, 살려내는 시대로. 쓰레기를 다시 활용하고 순환시키는 방향으로 세상은 조금씩 변화하고 있다. 버려질 뻔한 플라스틱에 새로운 생명을 불어넣는 ‘바이오 플라스틱 디자이너’, 쓰레기를 자원으로 바꾸는 시스템을 설계하는 ‘리사이클링 코디네이터’. 이들은 단순히 환경을 지키는 사람을 넘어, 우리 모두의 내일을 함께 디자인하는 존재다.
+							질병의 원인을 밝히고, 개인 맞춤 치료와 신약 개발로 이어지는 과정의 중심에는 ‘데이터’를 다루는 과학자들이 있다. ‘바이오 데이터 분석가’와 ‘유전체 분석가’는 생명과학과 정보기술을 결합해 인류의 건강한 미래를 설계하는 숨은 주역들이다.
 						</p>
 						<div class="article-meta">
 							<span class="b">글</span>
@@ -235,28 +235,34 @@
 					</div>
 				</div>
 				<div class="article-job-text">
-					<h5>
+					<!-- <h5>
 						쓰레기에 새로운 생명을 불어넣다 
-					</h5>
+					</h5> -->
 					<h4>
-						바이오 플라스틱 디자이너
+						유전체 분석가
 					</h4>
 					<p>
-						플라스틱은 현대인의 삶과 떼려야 뗄 수 없는 소재다. 그러나 그 이면에는 심각한 문제가 숨어 있다. 1950년과 비교하면 생산량은 무려 200배 가까이 늘었지만, 실제 재활용률은 고작 20%에 불과하다. 나머지는 소각되거나 매립되며, 이 과정에서 대기와 토양 오염은 물론 막대한 처리 비용까지 발생한다. 유엔환경계획(UNEP)에 따르면 2010년 한 해에만 최소 480만 톤에서 최대 1,270만 톤의 플라스틱이 바다로 유입됐다. 잘게 부서진 미세플라스틱은 플랑크톤이 섭취하고, 이를 다시 물고기가 먹으면서 결국 인간의 식탁까지 되돌아온다. 우리가 버린 쓰레기가 다시 우리 몸으로 들어오는 셈이다. 이 문제를 해결하기 위해 주목받는 직업이 있다. 바로 바이오 플라스틱 디자이너다. 이들은 미생물과 이산화탄소로 분해되는 생분해성 플라스틱이나 식물 자원을 원료로 한 바이오 플라스틱을 활용해 다양한 제품을 디자인한다. 단순한 제작을 넘어, 버려질 뻔한 재활용품에 새로운 가치를 부여하는 것이 이들의 역할이다.  
+						유전자 재조합과 개인 유전체 분석을 통해 인류 질병의 원인을 밝히고, 줄기세포의 해석 및 기능 연구를 바탕으로 맞춤의학 구현을 위한 신약 개발과 생체재생기술을 수행한다. 
+					</p>
+					<p>
+						유전체 관련 업무에는 유전체 해독, 분석, 해석이 포함되며, 각종 데이터를 비교·분석하여 유전자 간 상호작용과 환경적 요인이 질병에 미치는 영향을 알아낸다. 이를 위해 데이터마이닝과 통계 프로그램을 활용해 유전자 정보 데이터를 정밀하게 처리한다.	
+					</p>
+					<p>
+						맞춤의학은 개인의 유전적 특성에 따라 최적의 치료법을 제공하는 첨단 의학 분야로, 줄기세포를 활용한 치료기술과 신약 개발의 중요성이 커짐에 따라 이에 대한 전문 인력의 수요도 지속적으로 증가할 전망이다.
 					</p>
 				</div>
 			</div>
 			<div class="article-job-box job-box-book">
 				<h5>역량과 교육</h5>
 				<p>
-					바이오 플라스틱 디자이너가 되려면 화학공학, 화학, 신소재학 등 관련 전공이 큰 도움이 된다. 특히 화학공학과에서는 수학, 화학, 물리, 생물과 같은 기초 과목을 탄탄히 배운 뒤, 화공열역학·유체역학·열전달·물질전달·화학반응공학·유기공업화학 등 심화 과목과 각종 실험 과목을 통해 실무 감각을 익히게 된다. 관련 자격증으로는 화공기사, 화공산업기사, 화공기술사, 화공안전기술사, 화학분석기능사·기사 등이 있으며, 여기에 자연환경에 대한 감각과 미적·예술적 창의성이 더해진다면 더욱 적합하다.
+					유전자공학이나 생물학 관련 학과에 진학하거나 연계 전공을 이수해야 하며, 연구 분야에서 활동하려면 석사 이상의 학위를 갖추는 것이 바람직하다. 줄기세포의 작용 기전 규명, 세포 운명 제어, 리프로그래밍 기술, 질환 관련 유전자 기능 검증, 3차원 세포 기반 질환 모델 개발 등 전문 지식이 필요하다. 또한 혈액·유전자 검사 및 줄기세포 분리·배양 등 실험·분석 역량을 갖춰야 한다. 
 				</p>
 			</div>
 			<div class="article-job-box job-box-light">
 				
 				<h5>진출 가능 분야</h5>
 				<p>
-					전문성을 갖춘 이후에는 화학공학 기술자나 연구원으로 활동할 수 있다.
+					농촌진흥청 소속 연구기관(국립농업과학원, 국립식량과학원, 국립원예특작과학원, 국립축산과학원)을 비롯해 국립생명유전연구원, 대학 및 의과대학 연구실 등에서 연구원으로 활동할 수 있다. 줄기세포·유전자 연구와 관련된 국내외 생명과학 연구소, 제약회사, 바이오벤처 기업으로의 진출도 가능하다.
 				</p>
 			</div>
 		</section>
@@ -270,33 +276,38 @@
 					</div>
 				</div>
 				<div class="article-job-text">
-					<h5>
+					<!-- <h5>
 						쓰레기를 자원으로 바꾸는 전문가
-					</h5>
+					</h5> -->
 					<h4>
-						리사이클링 코디네이터
+						바이오 데이터 분석가
 					</h4>
 					<p>
-						리사이클링 코디네이터는 재활용 프로그램을 기획·운영하며, 폐기물을 최소화할 수 있는 방안을 제시하는 전문가다. 단체나 기업체에서 재활용 계획과 목표를 수립하고, 관련 기술을 개발하거나 폐기물 관리업체 및 협력사와의 계약을 조율하는 역할을 맡는다.
+						바이오 데이터 분석가는 바이오 관련 데이터를 목적에 따라 체계적으로 수집·처리·가공하고, 연구 및 개발 업무를 수행하는 전문가이다.
 					</p>
 					<p>
-						특히 일본에서는 폐기물 업체에 소속되어 ISO14001 인증을 받은 기업을 중심으로 재활용 대책을 제안하고, 관련 업무에 대한 영업활동까지 담당한다. 미국의 경우 리사이클링 코디네이터의 평균 연봉은 약 45,180달러(2014년 기준 약 5천만 원)이며, 종사자 수는 16만 7천 명에 달한다(O'Net, 2012).
+						바이오 데이터 분석을 통해 얻은 정보는 의학과 보건, 그리고 생명과학의 다양한 영역에서 폭넓게 활용된다. 
 					</p>
 					<p>
-						국내에서도 환경보존과 자원순환의 필요성에 대한 사회적 인식이 높아지면서 관련 종사자는 늘어나고 있다. 다만, ‘리사이클링 코디네이터’라는 전문 직함을 내세우는 인력은 아직 많지 않은 상황이다.
+						우선 의료 현장에서는 환자의 진료기록과 임상 데이터를 분석해 질병의 원인과 발병 패턴을 밝히고, 이를 바탕으로 보다 정확한 진단과 예측이 가능하도록 돕는다. 또한 의료 분야를 넘어, 생활습관과 환경 요인을 반영한 건강관리 연구에서도 그 역할이 중요하다. 식습관, 수면 패턴, 신체 활동량 등 개인의 일상적 데이터를 통합 분석해, 질병 예방과 건강 증진을 위한 데이터 기반 관리 시스템을 구축하는 것이다. 
+					</p>
+					<p>
+						이러한 연구 결과는 개인의 건강관리 서비스뿐 아니라 공공보건 정책 수립에도 활용되어, 사회 전체의 건강 수준을 높이는 데 기여한다.
+					</p>
+						다른 데이터 분석가와 달리, 개인 건강정보를 포함한 의료 임상 데이터를 다루기 때문에 데이터를 정확하고 신중하게 처리할 능력과 윤리 의식이 중요하다.
 					</p>
 				</div>
 			</div>
 			<div class="article-job-box job-box-book">
 				<h5>역량 및 교육</h5>
 				<p>
-					환경 보존과 자원 절약에 대한 관심은 물론, 자원 순환 구조에 대한 이해가 필수다. 재활용 프로그램을 효율적으로 운영하기 위해서는 상황 판단 능력과 관리 역량도 요구된다. 일본에서는 국제환경교육기구(Organization for International Environmental Education) 등에서 폐기물 재활용 코디네이터 양성 과정을 개설하고 수료증을 발급한다. 국내에서도 기술사, 건축사, 토목·전기·조경 분야의 시공관리기사, 환경계량사, 작업환경측정사, 폐기물처리시설기술관리자, 위험물질 취급자 등 다양한 자격증이 유용하다.
+					첨단 생물산업 분야에서는 생물 관련 기초학문과 생·의약, 천연물 제제, 대체의약 개발과 관련된 학문을 폭넓게 연마해야 한다. 또한 생명과학 관련 산업체 및 제약회사 등과의 연계 활동, 혹은 생명산업 현장 체험을 통해 실무 역량을 기르는 것도 중요하다.
 				</p>
 			</div>
 			<div class="article-job-box job-box-light">
 				<h5>진출 가능 분야</h5>
 				<p>
-					리사이클링 코디네이터는 국제환경교육기구나 O'NET 온라인 등 국제 기구, 재활용 관련 민간 컨설팅 업체 등에서 활동할 수 있다. 더 나아가 기업의 환경경영팀이나 공공기관에서도 수요가 점점 커질 것으로 기대된다. 
+					제약회사, 의과대학 및 약학대학 대학원, 건강식품 관련 기업, 국가직·지방직·행정직 공무원 등 다양한 분야에서 활동할 수 있다. 또한 소정의 교직과목을 이수하면 중등 2급 정교사(생명과학) 자격증 취득도 가능하다. 이 밖에도 농촌진흥청 및 소속 연구기관, 한국과학기술원(KAIST) 동물자원 분야, 국·공립 독성 연구소, 한국화학연구원, 식품의약품안전처, 농업협동조합, 농약회사, 바이오벤처기업, 국내외 대학원(미국·일본 유학 포함), 병원 및 의과대학 연구실 등 폭넓은 진로에서 전문성을 발휘할 수 있다. 
 					<i class="icon_last"></i>
 				</p>				
 			</div>
