--- a/sub_41.html
+++ b/sub_41.html
@@ -16,11 +16,11 @@
 	<script src="js/script2.js?ver202502"></script>
 <style>
 	:root {
-		--main-color: #5762AE;
+		--main-color: #2F95D8;
 		--text-color-small: #fff;
-		--text-color-title: #fff;
+		--text-color-title: #235898;
 		--text-color-title2: #fff;
-		--book-tag-color: #5762AE;
+		--book-tag-color: #5AA5DB;
 		--book-head-color: #000;
 	}
 
@@ -34,6 +34,10 @@ span.pipe {
 }
 .quote-normal {
 	margin-bottom: 5rem;
+}
+.article-image.dual-image .article-image-container {
+	display: grid;
+	grid-template-columns: 388fr 780fr;
 }
 @media (max-width:767px) {
 	.article-header-text h3 {
@@ -70,17 +74,17 @@ span.pipe {
 					<div class="article-header-text">
 						<span>책 읽는 농업과학자</span>
 						<h2>
-							농가와 소비자,<br>
-							모두를 위한 지속 가능한 축산의 길
+							얼어붙은 땅 위에서,<br>
+							꽃의 가능성을 피워내는 연구자
 						</h2>
 						<h4>
-							국립축산과학원 가축개량평가과 
+							국립원예특작과학원 북부원예시험장
 						</h4>
 						<h3>
-							박원철 농업연구사
+							권오현 농업연구사
 						</h3>
 						<p>
-							맛있고 건강한 고기, 강건한 가축, 그리고 환경 부담을 덜어내는 지속 가능한 축산. 박원철 농업연구사는 이를 위해 유전체 지도와 다중오믹스 분석과 같은 첨단 기술을 활용해 가축의 미래를 연구하고 있다. 부모로부터 어떤 유전자가 전해졌는지 또 어떤 신호가 질병과 육질을 좌우하는지 하나하나 밝혀내며 농가에는 비용 절감과 생산성 향상을, 소비자에게는 안전하고 품질이 고른 축산물을 전하기 위한 길을 열어가고 있다. 
+							눈보라가 매서운 철원에서도, 꽃을 피우기 위한 연구를 멈추지 않는 연구자가 있다. 권오현 농업연구사는 혹한 속에서도 피어날 꽃을 위해, 그리고 현장의 농업인과 함께 웃을 수 있는 봄을 위해, 오늘도 묵묵히 자신의 자리를 지키고 있다.
 						</p>
 						<div class="article-meta">
 							<span class="b">글</span>
@@ -109,50 +113,31 @@ span.pipe {
 						</div>
 					</div>
 					<h4>
-						유전체 지도로 여는 정밀 축산의 미래 
+						북부의 겨울에도 피어나는 화훼, ‘선발’로 길을 찾다 
 					</h4>
 					<p>
-						박원철 농업연구사의 연구는 유전체(Genome) 지도를 출발점으로, 전사체(Transcriptome)·단백질체(Proteome)·대사체(Metabolome)·미생물체(Microbiome)까지 아우르는 ‘다중오믹스’ 분석을 통해, 가축의 형질을 정밀하게 해석하고 농가에서 활용할 수 있는 ‘바이오마커(Biomarker)’를 발굴해 축산업의 생산성과 지속 가능성을 높이는 데 초점을 맞춘다. 
+						권오현 농업연구사는 대한민국의 최전방, 철원에 위치한 북부원예시험장에서 정원과 경관에 활용할 수 있는 화훼류의 ‘추위 적응성’을 연구하고 있다. 혹한의 환경에서도 피어나는 꽃, 그 가능성을 탐구하는 일이 바로 그의 연구다. 
 					</p>
 					<p>
-						“제가 하는 연구는 다중오믹스라는 분야예요. 유전체·전사체·단백질체·대사체·미생물체처럼 다양한 생명 정보를 함께 살펴보는 거죠. 유전체는 흔히 모든 유전 정보의 ‘설계도’에 비유할 수 있습니다. 하지만 설계도만으로는 실제 어떤 기능이 발휘되는지 알 수 없습니다. 전사체를 보면 어떤 유전자가 실제로 켜져 있는지 알 수 있고, 단백질체는 설계도로 만든 기계의 부품과 같습니다. 대사체는 그 기계가 작동하면서 생긴 부산물이라 할 수 있어요. 이처럼 여러 정보를 겹쳐 살펴보면, 가축에서 특정 질병이 왜 생기는지, 성장 속도가 왜 다른지, 육질이 어떻게 달라지는지를 훨씬 입체적으로 이해할 수 있습니다.”
+						최근 화훼는 그저 아름다운 식물이 아니라, 도시와 농촌 곳곳의 경관과 정원 조성을 이끄는 중요한 주제로 자리 잡고 있다. 우리의 일상 공간을 풍요롭게 채우고, 계절마다 다른 빛깔로 지역의 풍경을 바꾸는 힘을 지닌 존재다. 결국 권오현 농업연구사가 찾고 있는 것은, 사계절 내내 사람들의 하루에 포근한 온기를 더해줄 꽃이다. 
 					</p>
 					<p>
-						다중오믹스가 가축의 전체적인 모습을 보여주는 작업이라면, 또 하나 중요한 도구는 ‘반수체(Haploid, n) 지도’다. 사람이나 동물은 부모로부터 유전자를 각각 절반씩 받아 이배체(Diploid, 2n) 구조를 이루지만, 문제는 어떤 유전자가 아버지로부터 왔는지, 어머니로부터 왔는지를 쉽게 구분하기 어렵다는 점이다. 반수체 지도는 이처럼 유전자의 출처를 따로따로 구분해 보여준다. 박원철 농업연구사는 이 방법을 활용해 한우의 육량과 육질 형질을 보다 정확하게 분석할 수 있는 지도를 구축했고, 이를 통해 개량 연구의 정밀도도 높아졌다. 
+						“요즘은 정원이나 경관 조성에 화훼가 정말 다양하게 활용되고 있어요. 그래서 저는 북부의 추운 기후에서도 국내에서 육성된 화훼 품종이 잘 자랄 수 있는지를 직접 평가하고, 그중에서 적응력이 뛰어난 품종을 선별하는 일을 맡고 있습니다.”
 					</p>
 					<p>
-						나아가 박원철 농업연구사는 한우뿐 아니라 난축맛돈, 미니돼지, 긴꼬리닭 등 다양한 가축의 ‘표준유전체 지도’를 제작하며, 종(Species) 단위에서 기준이 되는 지도를 마련하는 연구에도 힘을 쏟고 있다. 반수체 지도가 가족 안에서 아버지와 어머니의 흔적을 구분해주는 작업이라면, 표준유전체 지도는 종 전체가 공유하는 설계도를 세우는 일이다. 
+						올해 7월 문을 연 북부원예시험장은 아직 첫 단추를 꿰는 시기다. 권오현 농업연구사는 본격적인 평가에 앞서 시험 포장을 조성하며 기반을 다지고 있다. 이곳에서는 앞으로 국내 여러 기관의 우수 화훼 품종들이 저온 적응성 평가를 받게 된다. 국립원예특작과학원의 장미·무궁화·철쭉 같은 목본 화훼류는 물론, 충남농업기술원의 화단국, 전북농업기술원의 안개초와 정원용 나리, 전남농업기술원의 수국과 정원용 장미 등 다양한 국산 품종들이 이 시험에 참여할 예정이다. 
 					</p>
 					<p>
-						“표준유전체 지도는 한 종을 대표하는 개체의 유전정보를 바탕으로 만든 기준 설계도와 같습니다. 다른 개체를 분석할 때 이 지도를 기준으로 삼으면 비교가 훨씬 수월해지지요. 쉽게 말해, 축산 유전체 연구에서 좌표축을 세워주는 작업이라고 할 수 있습니다.”
+						“각 기관에서 받은 묘를 야외 시험 포장에 심고 나서 성장 과정을 꾸준히 지켜보게 됩니다. 겨울을 한번 지나고 나면 이듬해 봄에 새순이 잘 올라오는지, 또 그 상태가 계속 건강하게 이어지는지를 보죠. 그다음에는 월동에 성공한 개체와 그렇지 못한 개체를 나눠서, 세포 수준에서 어떤 차이가 있는지도 들여다봐요. 겉에서 보이는 모습뿐 아니라, 식물 안쪽에서 무슨 일이 일어나고 있는지도 중요하거든요. 그리고 겨울을 잘 버틴 아이들은 어떤 특징이 있는지도 함께 관찰합니다. 줄기가 얼마나 단단하게 목질화됐는지, 꽃 색이 조금 더 푸른 톤을 띠는지 이런 외형적 특성이 내한성을 예측할 수 있는 기준이 될 수 있을지 고민하면서요. 이런 과정을 차근차근 거치다 보면, 결국 추운 환경에서도 안정적으로 잘 자라는 품종들을 선별할 수 있게 됩니다.”
 					</p>
 					<p>
-						결국 이 모든 연구의 목표는 ‘바이오마커 발굴’로 모인다. 바이오마커란 가축의 미래 형질을 미리 알려주는 신호다. 특정 유전자, 대사물질, 미생물 등이 고기의 맛이나 질병 저항성을 결정짓는 단서가 되는데, 박원철 농업연구사는 바로 이 단서들을 찾아내 농가가 실제로 활용할 수 있는 길잡이로 만드는 데 힘쓰고 있다. 
+						이처럼 지금은 철원에서 저온성 화훼를 선별하는 연구를 하고 있지만, 권오현 연구사의 발걸음은 늘 ‘꽃’과 함께해 왔다. 최근까지는 국립원예특작과학원 화훼과에서 포인세티아 ‘플레임(Flame)’ 개발에 참여하며, 국내 재배 환경에 맞는 품종을 만들어내는 일에 힘썼다.
 					</p>
-					<p>
-						“우리가 건강검진에서 혈압이나 혈당 수치를 확인하듯, 가축도 마찬가지입니다. 고기 맛, 성장 속도, 질병 저항성과 관련된 변이·유전자·대사 물질 같은 것들이 모두 일종의 신호, 즉 바이오마커인 거죠. 이 신호를 미리 찾아내면 농가는 송아지 때부터 어떤 개체가 고급육을 생산할지, 또 어떤 개체가 질병에 강할지를 빠르게 알 수 있습니다. 그에 따라 맞춤형 사양 관리가 가능해지고, 사료와 비용도 절약할 수 있지요. 결과적으로 고기 품질은 더 일정해지고 가축은 건강해집니다. 나아가 생산비와 환경 부담은 줄고, 소비자는 합리적인 가격에 안정적인 품질의 축산물을 만날 수 있습니다.”
-					</p>
-					<div class="article-image">
+					<div class="article-image dual-image big-image">
 						<div class="article-image-container">
 							<figure>
 								<img src="contents/sub_41_image_2.jpg">
 							</figure>
-						</div>
-					</div>
-					<h4>
-						정밀한 유전체 연구, 현장 변화를 이끌다 
-					</h4>
-					<p>
-						박원철 농업연구사의 연구는 결코 연구실 안에 머무르지 않는다. 현장에서 농가와 소비자가 직접 체감할 수 있는 변화로 이어진다. 이러한 변화를 이끌기 위해 그가 가장 중요하게 여기는 것은 뚜렷한 연구 철학이다. 그의 철학은 크게 세 가지로 요약된다. 먼저, 다양한 데이터를 하나로 엮어내는 ‘통합’이다. 유전체, 전사체, 대사체, 미생물체 같은 각각의 다중오믹스 데이터는 퍼즐 조각과 같아 따로 떼어내서는 전체 그림을 볼 수 없다. 서로 연결해 해석할 때 비로소 생명 현상의 진짜 모습이 드러난다.
-					</p>
-					<p>
-						“그리고 무엇보다 중요한 건 ‘협력’입니다. 다중오믹스 연구는 여러 전공과 현장을 아우르는 만큼, 다양한 전문성을 가진 연구자와 현장 전문가가 꾸준히 대화하며 문제를 함께 풀어가는 과정이 필수적이에요. 마지막으로 연구는 결국 현장에서 가치를 발휘해야 합니다. 농가와 축산업에 도움이 되지 않는다면 의미가 없으니까요. 생산자에게는 사료·시간·인력을 절약해 지속가능하고 수익성 높은 가축 생산을 돕고, 소비자에게는 안전하고 일정한 품질의 축산물을 안정적으로 공급하는 것, 바로 그 지점을 연구의 궁극적인 목표로 삼고 있습니다.”
-					</p>
-					<p>
-						통합과 협력, 그리고 현장 가치라는 세 가지 원칙은 박원철 농업연구사의 다중오믹스 연구를 단순한 기술 경쟁이 아니라 사회적 기여로 이끄는 든든한 나침반이 되고 있다. 그의 철학은 더 건강한 축산물, 더 강한 가축, 그리고 지속 가능한 축산업이라는 미래로 이어진다.
-					</p>
-					<div class="article-image">
-						<div class="article-image-container">
 							<figure>
 								<img src="contents/sub_41_image_3.jpg">
 							</figure>
@@ -161,20 +146,27 @@ span.pipe {
 					<blockquote class="quote-normal">
 						경험과 시간의 의미를 다시 돌아보게 하고, 성취만이 아닌 과정을 살아가는 가치를 일깨워 줄 수 있을 거예요.
 					</blockquote>
-					<p>
-						“송아지 때부터 성장 속도, 육질, 질병 저항성을 예측해  개체를 더욱 정밀하게 선발할 수 있고, 맞춤형 사양 관리도 가능합니다. 질병에 강한 계통을 미리 알 수 있으니 항생제 사용은 줄고, 안전성은 더욱 높아지는 거죠. 또 하나 중요한 변화는 데이터 기반의 의사결정 문화입니다. 센서, 빅데이터, AI가 결합된 정밀 축산 기술이 일상화되면 농가는 더 이상 ‘감’이나 ‘경험’에만 의존하지 않습니다. 실시간 데이터를 근거로 사양 관리, 번식 계획, 출하 시기를 결정할 수 있게 되는 것이죠. 이러한 기술은 단순히 생산성을 높이는 데 그치지 않아요. 사료와 에너지를 절약해 탄소 발자국을 줄일 수 있고, 친환경 인증이나 프리미엄 브랜드 전략에도 힘을 보탭니다. 결국 농가는 비용을 절감하고, 소비자는 더 안전하고 지속 가능한 축산물을 만나게 되는 것입니다.”
-					</p>
 					<h4>
-						성과만이 전부가 아님을 일깨워준 책  
+						포인세티아 ‘플레임’, 한국형 화훼의 가능성을 열다
 					</h4>
 					<p>
-						박원철 농업연구사는 기시미 이치로의 책 <나이 들 용기>를 통해 삶과 연구를 다시 돌아보게 됐다고 말한다. 오랫동안 성과를 내야 한다는 목표 하나만 바라보고 쉼 없이 달려왔던 그는, 어느 순간 성과만을 위해 살아온 건 아닌지, 그리고 그렇게 달려온 인생이 과연 잘 살아온 것인지에 대한 막연한 두려움을 품게 됐다. 
+						포인세티아는 ‘크리스마스 꽃’으로 불리는 대표적인 겨울철 분화식물이다. 붉은 포엽과 초록 잎의 대비가 뚜렷해 연말이면 카페나 교회, 백화점 등에서 실내 장식용으로 널리 쓰인다. 국내 출하 물량의 약 90%가 10월에서 12월 사이에 집중될 만큼, 계절성과 상징성이 뚜렷한 작목이다. 
 					</p>
 					<p>
-						“사실 이 책을 읽기 전에는 같은 저자의 <미움받을 용기>를 30대 초반에 먼저 읽었어요. 그런데 그때는 목표만 보고 달리던 시절이라 크게 공감되지 않았습니다. 반대로 40대 중반이 된 지금은 상황이 달랐어요. 연구 성과에 매달려온 끝에 ‘정말 이렇게 사는 게 맞나?’라는 의문이 생겼거든요. 아마 연구 현장이나 공공기관에서 일하시는 분들도 비슷한 고민을 하고 계실 거라 생각합니다. 이 책은 그런 분들에게 경험과 시간의 의미를 다시 돌아보게 하고, 성취만이 아닌 과정을 살아가는 가치를 일깨워 줄 수 있을 거예요.” 
+						하지만 1990년대까지만 해도 국내 농가에서 재배되는 품종은 대부분 미국과 독일에서 육성된 외국산이었다. 특히 미국에서 개발된 ‘이찌반(Eckalba)’ 품종이 시장을 거의 독점하다시피 했으며, 2001년 품종보호제도가 시행되면서 농가들은 모종 한 주당 100원 안팎의 로열티를 지불해야 했다. 재배 면적이 넓을수록 로열티 부담도 커졌고, 소규모 농가들에게는 큰 경제적 압박으로 다가왔다. 이 문제를 해결하기 위해 농촌진흥청 국립원예특작과학원은 2000년부터 국산 포인세티아 품종 육성에 나섰다.
+						“우리나라에서는 보통 포인세티아를 겨울철 단일 재배로 키워요. 그래서 착색 기간이 짧고, 또 색이 밝은 적색일수록 인기가 많습니다. 해외에서 많이 재배되는 ‘이찌반’ 같은 품종은 착색이 빠르다고 해도 보통 8주 정도 걸리거든요. 그런데 국내 농가들은 착색이 일주일만 늦어져도 난방비 부담이 커요. 그래서 국내 재배 환경과 소비자 취향에 맞는 대체 품종을 만들어보자고 생각했고, 그렇게 탄생한 게 바로 플레임입니다.” 
 					</p>
 					<p>
-						그는 특히 저자가 강조하는 ‘못 한다고 솔직히 말할 용기’, ‘지금 여기에서의 삶을 긍정하는 태도’라는 대목에 깊이 공감했다. 성과 달성에만 매달려온 지난 시간을 위로 받았고, 앞으로는 결과를 쌓는 데 그치지 않고 과정 자체를 즐기며 연구와 삶을 더 깊이 있게 이어가야겠다는 다짐을 하게 됐다. 
+						플레임의 가장 큰 강점은 국내 재배 환경에 맞춰 개발된 품종이라는 점이다. 국내는 겨울철 난방비 부담이 크기 때문에 재배 기간이 일주일만 단축되어도 경제성이 크게 개선된다. 또한 국내 소비자들은 작고 아담한 화분형을 선호하고, 크리스마스 시즌에 수요가 집중되므로 짧은 기간에 선명하게 착색되는 품종이 유리하다. 
+					</p>
+					<p>
+						무엇보다 주목할 점은 로열티 절감 효과다. 기존 외국 품종의 경우 모종 한 주당 약 100원의 사용료를 지불해야 했지만, ‘플레임’은 약 10~14원 수준으로 낮아져 육묘업체와 재배 농가의 부담을 크게 줄였다. 그 결과 2018년부터 2022년까지 최근 5년간 국산 포인세티아 품종 보급으로 약 2억 원의 로열티 절감 효과를 거둔 것으로 나타났다. 
+					</p>
+					<p>
+						‘플레임’ 개발 과정이 순탄했던 것은 아니다. 당시 국내 포인세티아 보급을 담당하던 종묘업체가 국산 품종 보급을 중단하겠다는 입장을 밝힌 적도 있었다. 하지만 권오현 연구사는 “한 해만 더 시험해보자”는 간절한 마음으로 설득을 이어갔다. 그 결과 시장 반응이 예상보다 긍정적으로 나타났고, 국산 품종 보급은 다시 이어질 수 있었다. 무엇보다 그는 한국의 재배 환경과 소비 문화를 이해하는 것이 품종 개발의 출발점이라고 말한다. 
+					</p>
+					<p>
+						“해외에서는 포인세티아를 노지에서 크게 키우지만, 우리는 작고 아담한 화분 형태를 선호하죠. 조명 밝기가 낮은 실내에서도 색이 선명하게 보이는 게 중요하니까요. 이런 소비 문화의 차이를 이해하고 품종을 개발하는 게, 결국 농가와 시장을 잇는 연구라고 생각합니다.”
 					</p>
 					<div class="article-image">
 						<div class="article-image-container">
@@ -183,11 +175,20 @@ span.pipe {
 							</figure>
 						</div>
 					</div>
+					<h4>
+						태도에 따라 직업의 가치가 달라진다
+					</h4>
 					<p>
-						“지금 도전하고 있는 연구도 그 연장선상에 있습니다. 바로 한우 유전병의 원인 유전자를 밝히는 거예요. 사실 3년 전쯤 비슷한 연구를 진행한 적이 있는데, 그때는 데이터 수집이 쉽지 않고 협업도 원활하지 않아서 결과가 좋지 않았습니다. 이번에는 농가에 꾸준히 홍보해 시료와 정보를 확보하고, 여러 과와 기관이 협력하는 방식으로 다시 도전하고 있습니다. 만약 원인이 유전병이라면, 그걸 밝혀내서 피해를 줄이는 게 목표예요. 부모의 유전정보를 활용해 인공수정 과정에서 위험한 유전자형은 배제하거나, 원인 유전자형을 가진 씨수소나 암소를 도태시키는 방식으로 피해를 최소화할 수 있죠. 세계적으로는 소의 기형이나 질병 관련 유전정보가 많이 공개돼 있지만, 한우에 대해서는 아직 전무하거든요. 그래서 꼭 이 연구만큼은 밝혀내고 싶은 마음이 큽니다.”
+						최근 권오현 농업연구사가 읽은 책은 『내가 천 개의 인생에서 배운 것들』이다. 평소에는 전문 서적을 주로 보느라 다른 책을 접할 기회가 많지 않았지만, 어느 날 서점에서 우연히 이 책을 집어 들었다고 한다. 저자가 오랜 시간 다양한 사람들을 만나고, 또 자신의 가족과 삶을 돌아보며 얻은 깨달음을 담은 책이다. 화려한 성공담보다 일상의 순간들, 사랑과 관계, 태도에 대한 질문이 더 진하게 남는다. 특히 평범한 직업도 어떻게 바라보느냐에 따라 그 의미가 달라질 수 있다는 메시지가 깊이 스며 있다.
 					</p>
 					<p>
-						성과를 넘어 과정을 중시하고, 현장에서 가치를 찾으려는 그의 연구 철학은 결국 더 건강한 축산물과 지속 가능한 축산업으로 이어지고 있다. 앞으로 그의 발걸음이 한국 축산 연구의 새로운 길을 여는 또 하나의 이정표가 될 것이다. 
+						특히 권오현 농업연구사는 이 책을 통해 사람 사이의 관계와 일의 가치를 새삼 돌아보게 되었다고 말했다. 그중에서도 마음에 남은 장면은 아버지가 자신의 일을 대하는 태도를 바꾸며 직업의 가치를 새롭게 깨닫는 대목이었다. 
+					</p>
+					<p>
+						“’나의 태도에 따라 일의 의미와 가치가 달라질 수 있다’는 말이 참 와닿았어요. 생각해 보면 그게 제가 현장에서 연구를 해나가는 방식이랑도 비슷하더라고요. 우리 일 역시 농업인이나 보급업체 등 함께 일하는 분들의 입장을 이해해야 하잖아요. 결국 다들 잘되기를 바라는 마음은 같으니까요. 서로의 관점을 생각하면서 보람을 찾아가는 게 중요하다고 생각해요.”
+					</p>
+					<p>
+						책에서 전한 메시지처럼, ‘나의 태도에 따라 직업의 가치도 달라진다’는 말은 지금의 권오현 농업연구사에게도 깊이 닿아 있다. 처음 철원으로 발령받았을 때는 외딴곳에 홀로 떨어진 듯한 막막함도 있었지만, 그는 이 공간에서 자신이 할 수 있는 일을 찾으며 조금씩 보람을 쌓아가고 있다. 눈 내리는 철원의 겨울을 견디며 피어날 화훼처럼, 그의 연구 또한 묵묵히 이 자리에서 봄을 준비하고 있다. 
 						<i class="icon_last"></i>
 					</p>
 					<article>
@@ -195,12 +196,12 @@ span.pipe {
 							<div class="book-box-header">
 								<h5>이런 분께 추천합니다</h5>
 								<h4>
-									『나이 들 용기』
+									『내가 천 개의 인생에서 배운 것들』
 								</h4>
 								<h6>
-									기시미 이치로 저·김지윤 번역
+									김도윤 저
 									<span class="pipe">|</span>
-									21세기북스
+									북로망스
 								</h6>
 							</div>
 							<div class="book-box-image">
@@ -209,15 +210,15 @@ span.pipe {
 								</figure> 
 							</div>
 							<p>
-								이 책은 나이 듦을 단순히 젊음의 상실이나 쇠퇴로 보지 않고, 시간이 쌓아 준 경험과 통찰을 통해 새로운 가치를 발견하는 과정으로 설명합니다. ‘못 한다고 솔직히 말할 용기’, ‘지금 여기에서 가능한 것에 집중하기’, ‘성과나 생산성이 아닌 존재 자체의 의미를 찾기’와 같은 메시지를 통해 삶의 방향을 다시 세울 수 있도록 돕습니다.
+								이 책 덕분에 직장인으로서, 또 가족 구성원으로서의 제 모습을 다시 돌아보게 되었습니다. 각자의 역할을 충실히 해내면서도 서로의 관점을 이해하는 마음이 얼마나 중요한지, 그 소중함을 새삼 느낄 수 있었어요.
 							</p>
 							<p>
-								또한 부모와 자식 관계, 돌봄, 죽음과 유한성의 수용 등 누구나 마주하게 될 주제를 차분히 풀어내고 있어요. 특히 성과와 실적에 쫓기는 연구자, 공무원, 직장인뿐 아니라 인생의 전환점을 앞둔 모든 분들께도 ‘지금까지의 삶이 헛되지 않았으며 앞으로도 성장할 수 있다’라는 위로와 용기를 전해 줍니다. 스스로의 삶을 되돌아보고 다음 단계를 준비하는 데 큰 도움이 되는 책입니다.
+								일을 하다 보면 예기치 못한 상황이 찾아오기도 하고, 원치 않던 임무를 맡게 될 때도 있죠. 그런데 그 일을 대하는 ‘태도’에 따라 일의 의미와 가치가 달라질 수 있다는 걸, 이 책을 통해 다시금 깨달았습니다. 결국 어떤 자리에서든 주어진 일을 나답게 해내려는 마음가짐이 가장 중요하다는 사실을 마음에 새기게 됐습니다.
 							</p>
 							<div class="book-box-tag">
-								<span>#삶의_방향 </span>
-								<span>#위로와_용기</span><br>
-								<span>#나이_들_용기</span>
+								<span>#인생에서_정말_소중한_것</span><br>
+								<span>#삶의_태도</span><br>
+								<span>#마음가짐</span>
 							</div>
 					</article>
 				</div>
