--- a/sub_33.html
+++ b/sub_33.html
@@ -16,19 +16,22 @@
 	<script src="js/script2.js?ver202502"></script>
 <style>
 :root {
-	--main-color: #CFA70B;
+	--main-color: #EC6C44;
 	--text-color-small: #fff;
 	--text-color-title: #fff;
 	--text-color-title2: #000;
-	--box-bg-color: #FAF5E7;
+	--box-bg-color: #FDF0EA;
 	--box-border-color: #000;
-	--box-text-color: #A1B538;
+	--box-text-color: #EEAF90;
 }
 .article-header-text h2 {
 	font-size: 5rem;
 }
 .quote-normal {
 	margin-bottom: 4rem;
+}
+.box-text-2 {
+	margin-top: 1rem;
 }
 .box-text-1 li,
 .box-text-2 li {
@@ -58,6 +61,9 @@
 	left: 0;
 	top: 0.4rem;
 }
+.box-text-2 li strong {
+	background-color: var(--box-text-color);
+}
 @media (max-width: 767px) {
     .article-header-text h3 {
         font-size: 3rem;
@@ -78,21 +84,20 @@
 					<div class="article-header-text">
 						<span>이로운 맛, 농업이 미래다</span>
 						<h2>
-							땅이 알려준 진짜 답,<br>
-							건강한 땅이 맛있는 쌀을 만든다
+							해발 600m에서 익어가는 것들
 						</h2>
 						<h4>
-							또바기농원
+							지리산피아골식품
 						</h4>
 						<h3>
-							권오빈 대표
+							김미선 대표
 						</h3>
 						<div class="article-meta">
 							<span class="b">글</span>
 							<span>장희주</span>
 							<span class="pipe">ㅣ</span>
 							<span class="b">사진</span>
-							<span>김준후</span>
+							<span>조재무</span>
 							<span class="pipe">ㅣ</span>
 							<span class="b">추천</span>
 							<span>기술지원과 황대용 농업연구관</span>
@@ -110,7 +115,7 @@
 			<div class="article-body-wrap">
 				<div class="article-prologue">
 					<p>
-						농사를 지은 지 16년, 수많은 실험과 시행착오 끝에 또바기농원 권오빈 대표가 얻은 결론은 단순하지만 분명하다. 기술도, 약도, 비료도 결국 땅이 건강해야 제 역할을 한다는 것. 그래서 권오빈 대표는 오늘도 땅을 고르고, 물길을 다스리며, 미생물이 살아 숨 쉬는 흙을 만든다. 또바기농원의 쌀은 그렇게 태어난다.
+						해발 600m, 시간의 속도가 느리게 흐르는 산골에서 김미선 대표는 장을 익히고 삶을 익히며 버티는 법을 배워왔다. 고로쇠 수액 한 방울, 온도 1도, 소비자의 한마디까지 놓치지 않는 이곳의 장은 자연과 사람이 함께 겪어낸 시간의 결과물이다.
 					</p>
 				</div>
 				<div class="article-text">			
@@ -122,25 +127,16 @@
 						</div>
 					</div>
 					<h4>
-						쌀 한 톨에 담긴 16년의 실험
+						피아골에서 시작된 장 빚는 시간
 					</h4>
 					<p>
-						부모님이 운영하시던 정미소를 이어받으며, 권오빈 대표의 농업 인생은 자연스럽게 시작됐다. 그러나 시작이 늘 그렇듯, 현실은 녹록지 않았다.
+						지리산 피아골에서 태어나고 자란 김미선 대표는 식당을 운영하던 부모님 곁에서 늘 직접 만든 음식을 보며 자랐다. 장은 어머니에게서 배웠고, 자연스레 대학 졸업 후 곧바로 창업의 길을 선택했다. 당시만 해도 장류 시장에는 이미 강자들이 즐비했다. 후발주자로 뛰어들기 위해 그는 ‘어떻게 하면 차별화된 장을 만들 수 있을까’를 깊이 고민했다. 그때 눈에 들어온 것이 바로 고향 피아골에서 나는 ‘고로쇠 수액’이었다. 보통 장은 1월에서 3월 사이에 담그는데, 이 시기가 고로쇠 수액이 오르는 시기와 정확히 겹친다. 김미선 대표는 이 자연의 타이밍에서 자신만의 답을 찾았다.
 					</p>
 					<p>
-						“16년 전만 해도 정미소는 꽤 잘 됐어요. 군 제대 후 아버지의 정미소를 이어받았는데, 얼마 지나지 않아 사람들이 하나둘 미곡종합처리장(RPC, Rice Processing Complex)이나 대형 공장으로 옮겨가더라고요. 일이 점점 줄어드니 미래가 잘 보이지 않았어요. 그래서 퇴비 배달도 해보고, 닥치는 대로 여러 일을 해보다가 ‘이대로 괜찮을까?’ 하는 생각이 들었죠.”
+						“예전에는 지리산 고로쇠가 정말 유명했는데, 이제는 전국 곳곳에서 고로쇠가 나오다 보니 지역 농가들의 판로가 많이 줄었어요. 그래서 ‘이 좋은 물을 장에 쓰면 어떨까’라는 생각이 들었고, 동시에 이를 통해 지역 주민들과 함께 소득을 만들 수 있겠다는 확신도 들었죠.”
 					</p>
 					<p>
-						그러던 중 문득 떠오른 생각이 있었다. ‘정미소와 농사는 결국 연결돼 있으니, 언젠가는 내 논도 생기겠지.’ 그 믿음 하나로 서른 살, 권오빈 대표는 정미소와 더불어 본격적으로 벼농사를 시작했다. 기계 하나 없는 완전한 ‘맨손’으로 시작한 출발이었다.
-					</p>
-					<p>
-						“애초에 논이 질퍽해서 기계가 들어갈 수가 없었어요. 그래서 천 평 가까운 논을 전부 손으로 떼어냈죠. 농사는 처음이라, 하나부터 열까지 새로 배워야 했어요. 그래도 운이 좋았던 게, 주변에서 정말 많은 도움을 주셨어요. 친구들도, 선후배들도, 또 장인어른까지 모두 큰 힘이 되어 주셨죠.”
-					</p>
-					<p>
-						그렇게 한 걸음씩 땅을 알아가며 논의 형태를 바꾸고, 배수로를 손보고, 땅을 고르고 다듬었다. 오랜 시간 쌓인 노력 끝에 마침내 ‘네모반듯한 논’이 완성됐다. 하지만 권오빈 대표는 여전히 ‘좋은’ 쌀을 짓기 위해 답을 찾아가는 여정에 있다. 
-					</p>
-					<p>
-						“농사지은 쌀을 판매까지 하니 무조건 품질이 좋아야 해요. 그래서 단백질 함량을 검사하고 수분도 체크하면서 해마다 여러 품종을 심어 여러 방법을 시도해 봤어요. 그래도 여전히 더 나은 답을 찾아가고 있습니다.”
+						무엇보다 피아골의 자연 환경은 그 자체로 제품 경쟁력이었다. 이곳은 해발 600m 고지의 깊은 골짜기 안쪽에 자리해 농사나 축사가 거의 없다. 주민 대부분이 식당과 숙박업으로 생계를 이어가는 만큼, 공해와 농약에서도 비교적 자유롭다. 구례 읍내보다 기온이 5도가량 낮아 발효에도 유리한 조건을 갖추고 있다.
 					</p>
 					<div class="article-image">
 						<div class="article-image-container">
@@ -149,82 +145,63 @@
 							</figure>
 						</div>
 					</div>
+					<h4>
+						청정한 자연에서 스마트 발효까지
+					</h4>
 					<p>
-						권오빈 대표는 해마다 새로운 방법을 찾아 헤맸다. 벼의 이삭이 자라나는 시기에 주는 비료인 이삭거름을 과감히 생략해 보기도 했다. 이 시기의 비료는 쌀의 단백질 함량과 수량을 높이지만, 지나치면 오히려 품질이 떨어지고 벼가 쓰러지는 현상이 생길 수도 있다. 지난해에는 생육보다 병해충 예방에 집중하며 방제에 온 힘을 쏟았지만 결과는 기대에 못 미쳤다. 그 경험 끝에 그는 깨달았다. 겉으로 드러나는 관리보다 기본을 바로 세우는 일이 먼저라는 것. 그래서 올해는 못자리부터 이앙까지 모든 과정을 차근차근 점검하며 기본기를 다지는 데 집중했다.
+						청정한 자연 아래에서 지리산피아골식품의 장은 처음부터 끝까지 이곳에서 빚어진다. 콩 세척부터 삶기, 메주 성형, 발효와 건조, 고로쇠 간수 담그기, 숙성, 그리고 분리 작업까지 모든 공정을 한곳에서 이어간다.
 					</p>
 					<p>
-						“올해는 아예 처음부터 다시 시작했어요. 기후 변화에 맞춰 못자리와 이앙 시기를 한 달씩 늦췄죠. 날씨도 덥고 여건도 좋지 않았지만, 처음부터 과정을 차근히 짚다 보니 작물이 훨씬 안정적이더라고요. 농사는 1년에 한 번뿐이라, 한 번의 실패가 곧 1년의 기다림이에요. 그래도 결국엔 땅이 답을 줍니다. 제대로 준비한 만큼 작물이 그에 화답하니까요. 그게 농사의 매력인 것 같아요.”
+						“가을이 지나면 곧 ‘장 농사’ 준비에 들어가요. 지역 농가에서 콩을 수매해 세척하고, 콩을 푹 삶은 뒤 사각형 메주로 성형합니다. 그 메주를 1차 발효시키고, 다시 자연 건조를 거쳐 고로쇠 수액에 소금을 풀어 만든 간수에 담가요. 보통 40~50일가량 담가둔 뒤 분리 작업을 하면, 위로 뜬 맑은 물은 간장이 되고 아래 남은 메줏덩어리가 된장이 되죠.”
 					</p>
-					<div class="article-image dual-image-column">
+					<p>
+						지리산피아골식품 장의 가장 큰 특징은 이 단계에서 드러난다. 일반 물이 아닌 고로쇠 수액을 간수에 사용하기 때문에, 장의 감칠맛과 깊이가 자연스럽게 강화된다.
+					</p>
+					<div class="article-image">
 						<div class="article-image-container">
 							<figure>
 								<img src="contents/sub_33_image_3.jpg">
 							</figure>
+						</div>
+					</div>
+					<p>
+						“소비자들이 드셔보시고는 ‘왜 이렇게 감칠맛이 나요?’ 하고 많이 물어보세요. 특별한 재료를 넣은 건 없고, 수액이 지닌 자연스러운 단맛과 미네랄이 장의 풍미를 끌어올려 주는 거죠.”
+					</p>
+					<p>
+						고로쇠 외에도 원료는 전부 국내산만 사용하며, 그중에서도 1등급만을 고집한다. 이러한 원칙 덕분에 전통식품 인증을 받을 수 있었지만, 프리미엄 원재료를 지속적으로 사용하는 일은 언제나 비용과의 싸움이다. 그럼에도 김미선 대표는 값싼 원료와 타협하지 않는다. 좋은 장을 위해 반드시 지켜야 할 기준이라고 믿기 때문이다.
+					</p>
+					<p>
+						원료 외에 김미선 대표가 매년 크게 고군분투하는 대상이 하나 더 있다. 바로 ‘날씨’다. 기후변화는 전통 발효 과정에도 예외 없이 침투했다. 한겨울에도 이례적으로 따뜻한 날이 이어지거나, 반대로 갑작스러운 한파가 길어지는 등 기온 변화가 심해지면서 항아리 속 미생물들도 불규칙한 환경에 ‘스트레스’를 받는다. 해마다 발효와 숙성 조건이 달라지니, 장맛 역시 일정하게 유지하기 어려워진다.
+					</p>
+					<p>
+						“손님들이 ‘해마다 맛이 달라요’라고 하면 정말 곤란하잖아요. 그 편차를 조금이라도 줄이기 위해 농촌진흥청과 함께 스마트팜 시스템을 도입했습니다. 숙성에 유리한 미생물이 잘 자랄 수 있는 조건을 찾는 연구를 계속하고 있어요.”
+						발효실에서는 온도와 습도를 정밀하게 조절하며 1차 발효를 관리하고, 이후 숙성과 발효는 자연 환경과 데이터가 서로 보완하는 방식으로 진행된다. 농촌진흥청의 분석에 따르면 이 시스템은 발효 안정성에 확실한 도움이 되고 있으며, 지리산피아골식품은 그 결과를 믿고 긴 호흡의 실험을 이어가고 있다.
+					</p>
+					<div class="article-image dual-image-column">
+						<div class="article-image-container">
 							<figure>
 								<img src="contents/sub_33_image_4.jpg">
 							</figure>
-						</div>
-					</div>
-					<h4>
-						땅을 살려 쌀을 키우다
-					</h4>
-					<p>
-						땅의 중요함을 깨달은 권오빈 대표는 지난해부터 건강하고 맛있는 쌀을 짓기 위해 친환경 농사에 나섰다.
-					</p>
-					<p>
-						“친환경의 기본은 토양을 되살리는 거예요. 미생물과 흙이 살아나면 작물도 훨씬 건강하게 자랍니다. 발아도 잘 되고, 병해에도 강해지고요. 실제로 그렇게 땅을 만들어 파종해 보니 약을 거의 쓰지 않아도 되더라고요. 땅의 환경이 살아 있으니, 오히려 벌레가 잘 안 먹어요.”
-					</p>
-					<p>
-						권오빈 대표가 말하는 친환경 농사의 핵심은 단순히 ‘농약을 덜 쓰는 농사’가 아니다. ‘땅이 스스로 숨 쉴 수 있게 만드는 일’, 그것이 진짜 친환경의 출발점이다. 그렇다면 땅이 살아나기 위해서는 어떤 노력이 필요할까. 그는 토양 관리의 첫걸음을 ‘배수’에서 찾는다.
-					</p>
-					<p>
-						“물이 고이면 미생물도 제대로 활동하지 못해요. 퇴비는 조금 일찍 넣어 땅과 충분히 섞이게 해야 하고요. 쟁기 작업으로 굳은 층을 깨줘야 토양이 숨을 쉴 수 있습니다. 특히 농사를 잘 짓는 분들은 수확이 끝나자마자 땅을 다듬더라고요. 쟁기질하고 로터리를 쳐서 다음 해를 준비하죠. 그 과정에서 남은 잔여물이 분해되며 토양이 더 좋아집니다. 결국 그게 다음 해 작물의 힘이 돼요.”
-					</p>
-					<p>
-						땅이 살아야 농사도 산다는 것, 그것이 권오빈 대표가 실험과 관찰 속에서 얻은 결론이다. 그래서 그는 오늘도 논 한가운데 서서 조용히 땅의 숨소리에 귀 기울인다.
-					</p>
-					<div class="article-image">
-						<div class="article-image-container">
 							<figure>
 								<img src="contents/sub_33_image_5.jpg">
 							</figure>
 						</div>
 					</div>
-					<blockquote class="quote-normal">
-						기록을 남기다 보니 관찰이 세밀해지고, 작물에 대한 이해도 깊어졌어요. 그렇게 쌓이다 보니 생산량도, 품질도 확실히 좋아졌습니다
-					</blockquote>
 					<h4>
-						땅을 다르게 보고, 농사의 길을 새롭게 쓰다 
+						산골에서 쌓아 올린 가능성의 길 
 					</h4>
 					<p>
-						그런 권오빈 대표에게 또 한 번의 전환점이 찾아왔다. 논을 일구던 중 ‘벼 대신 다른 작물을 심어야 한다’는 정책 변화가 생긴 것이다. 벼농사밖에 모르던 그였지만, 이번에도 멈추지 않았다. 오히려 그 계기로 ‘논을 다르게 보는 법’을 배웠다. 
+						어려움이 없었던 건 아니었다. 소비자 피드백은 때로는 상처였고, 시간이 지나 보니 자양분이기도 했다. 처음엔 ‘짜다’, ‘달다’ 같은 지적에 자존심이 많이 상했지만, 어느 순간부터 김미선 대표는 ‘소비자 중심’으로 제품을 고쳐 나가기 시작했다. 청국장의 냄새를 줄인 버전을 개발하고, 젊은 층 입맛에 맞는 장을 계속 시도했다. 그러면서도 연세 있는 고객들의 취향도 놓치지 않았다. 이렇게 ‘맛’에 대한 고민이 깊어지다 보니, 자연스럽게 제품의 외연도 넓어져 갔다. 지리산피아골식품의 또 다른 축은 바로 ‘확장’이다. 장류 제조에 머물지 않고 시래기 된장국, 우거지 된장국, 청국장 찌개 등 다양한 밀키트 제품을 꾸준히 개발해왔다.
 					</p>
 					<p>
-						“후배와 함께 대추나무 교육을 받으러 경산으로 내려가던 길이었어요. 고속도로를 달리는데, 창밖에 논마다 밭작물이 자라고 있더라고요. 그때 문득 생각이 들었죠. ‘시선을 바꾸면 땅의 가능성도 달라질 수 있겠구나.’ 그때부터 콩 농사를 짓기 시작했습니다.”
+						“데이터를 보니까 된장 1kg 한 통을 재구매하는 데 평균 3개월이 걸리더라고요. ‘좋은 장을 더 빨리, 더 자주 드실 수 있게 하려면 어떻게 해야 할까’를 고민하다 보니 자연스럽게 밀키트라는 해답에 닿았습니다.”
 					</p>
 					<p>
-						이천은 전통적으로 쌀값이 높아 논에 다른 작물을 심는 걸 꺼려왔다. 게다가 습한 토질에 배수가 잘되지 않아 밭작물 재배에는 부적합하다는 인식이 강했다. 하지만 권오빈 대표는 달랐다. 직접 배수로를 파고, 경운기를 몰아 땅을 갈았다. 첫 도전의 결과는 기대 이상이었다.
+						밀키트 제품군이 늘어나면서 매출도 함께 성장했다. 특히 흥미로운 점은 밀키트가 된장 판매를 잠식하는 것이 아니라 오히려 ‘입문용’ 역할을 한다는 사실이다. 시래기 된장국 밀키트를 맛본 소비자가 “이 된장 따로도 판매하나요?”라고 문의하고, 이어 해당 된장을 다시 구매하는 선순환 구조가 형성됐다.
 					</p>
 					<p>
-						“처음에는 1만 1천 평을 심었어요. 비용은 천만 원 정도 들었는데, 매출이 4,900만 원이 났죠. 그때 자신감이 생겼어요.”
+						제품이 다양해지며 소비층도 점차 넓어졌고, 자연스럽게 ‘어디에, 어떻게 팔 것인가’에 대한 고민도 깊어졌다. 판로 개척은 지금도 그에게 가장 어려운 과제다. 오프라인 위주였던 판매 구조는 코로나 이후 온라인 중심으로 빠르게 재편됐다. 현재 매출의 약 10%는 수출, 나머지는 국내 판매인데, 그중에서도 온라인 비중이 크다. 김미선 대표는 수많은 채널을 경험하며 ‘지리산피아골식품과 맞는 길’을 찾아왔다. 
 					</p>
-					<p>
-						무엇보다 도전의 밑바탕에는 ‘배움’이 있었다. 이천시 농업기술센터에서의 교육과 이천농업생명대학 1년 교육 수료를 통해 그는 본격적인 변화를 맞았다.
-					</p>
-					<p>
-						“농업기술센터에서 재배 매뉴얼을 받고 교육을 들으면서, 기존에 몰랐던 시도를 하나씩 더해보기 시작했어요. 게다가 센터 주무관님들이 작물 상태를 꾸준히 물어봐 주시니 그때부터 영농일지를 쓰기 시작했어요. 기록을 남기다 보니 관찰이 세밀해지고, 작물에 대한 이해도 깊어졌어요. 그렇게 쌓이다 보니 생산량도, 품질도 확실히 좋아졌습니다.”
-					</p>
-					<p>
-						배움은 단순히 기술을 익히는 일이 아니라, 스스로의 농사를 돌아보는 계기가 됐다. 그 과정을 거치며 권오빈 대표는 농사의 본질, 그리고 자신이 나아가야 할 방향을 다시 생각하게 됐다. 이제 권오빈 대표의 관심은 ‘잘 짓는 농사’에서 ‘지속 가능한 농사’ 로 옮겨가고 있다. 그건, 다음 세대와 함께 숨 쉬는 방법을 찾는 일이다. 
-					</p>
-					<p>
-						“젊은 사람들이 살기에는 환경이 너무 힘들어요. 놀이터 하나 만드는 데 15년이 걸렸어요. 그래서 언젠가 공원처럼 농장을 꾸미고 싶어요. 아이들이 뛰놀고, 가족이 함께할 수 있는 공간이죠. 무엇보다 쌀에 대한 체험형 농장으로 발전시켜서, 아이들이 직접 벼를 심고 수확하면서 우리가 먹는 쌀이 어디서, 어떻게 오는지를 몸으로 느낄 수 있게 하고 싶습니다.”
-					</p>
-					<p>
-						‘또바기’는 순우리말로 ‘언제나 한결같이, 꼭 그렇게’라는 뜻이다. 그 이름처럼 권오빈 대표의 삶도 늘 한결같다. 해마다 다른 날씨 속에서도 변함없이 땅을 살피고, 같은 마음으로 씨앗을 뿌린다. 그의 농사는 화려하진 않지만, 꾸준하고 단단하다. 그리고 그 단단함 속에서 그는 오늘도 논 한가운데 서서 다짐한다. 농촌에서 아이들이 안전하게 뛰놀고, 배우며 살아갈 수 있는 ‘살아 있는 터전’을 만들겠다고. 
-						<i class="icon_last"></i>
-					</p>
-						
 					<div class="article-image">
 						<div class="article-image-container">
 							<figure>
@@ -232,10 +209,26 @@
 							</figure>
 						</div>
 					</div>
+					<!-- <blockquote class="quote-normal">
+						기록을 남기다 보니 관찰이 세밀해지고, 작물에 대한 이해도 깊어졌어요. 그렇게 쌓이다 보니 생산량도, 품질도 확실히 좋아졌습니다
+					</blockquote>
+					<h4>
+						땅을 다르게 보고, 농사의 길을 새롭게 쓰다 
+					</h4> -->
+					<p>
+						특히 쿠팡 로켓배송에 입점하기까지의 과정은 말 그대로 ‘눈물의 수업료’였다. 지리산에서 평택까지 냉장 화물차를 보냈다가 온도 기준이 맞지 않아 통째로 반려된 적도 있었고, 첫 발주액에서 운송비를 제하고 나면 사실상 남는 게 없던 시기도 길었다. 자체 창고를 둘 여력조차 없어 결국 물류 대행까지 도입하며 버텨야 했다. 그럼에도 김미선 대표는 “이 모든 과정을 몸으로 겪었기에, 이제야 조금씩 길이 보인다”고 말한다.
+					</p>
+					<p>
+						“동일한 고민을 하는 분들에게 꼭 드리고 싶은 말은, ‘많이 울면 돼요’예요. 좋은 플랫폼에 입점한다고 해서 그게 끝이 아니잖아요. 소비자에게 알려지기까지는 시간이 반드시 필요해요. 그 마이너스 구간을 어느 정도 버텨야, 나중에 매출이 오르는 시점이 오더라고요.”
+					</p>
+					<p>
+						김미선 대표는 올해로 피아골에 내려온 지 19년을 맞았다. 그 사이, 초기에는 보기 어려웠던 청년 여성농업인들이 하나둘씩 터를 잡는 변화를 직접 목격해 왔고, 청년 여성농업인 활동을 통해 다른 지역의 깊은 골짜기에서 자신과 비슷한 삶을 살아가는 동료들을 만나면서 그는 ‘혼자가 아니구나’라는 안도감을 얻었다. 그래서 앞으로는 더 많은 이들에게 ‘농촌에도 분명한 비전이 있다’는 사실을 보여주고 싶다. 그의 바람은 단순한 개인의 성공을 넘어선다. 변화하는 기후와 급변하는 시장 속에서도 서로의 버팀목이 되어, 이 산골에서 함께 미래를 만들어가는 일. 어쩌면 지금 피아골에서 서서히 익어가고 있는 것은 장뿐만 아니라, 이곳 청년 농업인들의 가능성 그 자체인지도 모른다. 
+						<i class="icon_last"></i>
+					</p>
 					<article>
 						<div class="dream-box">
 							<h4>
-								또바기농원의 대표 상품
+								지리산피아골식품 대표 상품
 							</h4>
 							<div class="dream-box-image">
 								<figure>
@@ -249,40 +242,31 @@
 								맛있으면서도 건강한 선택!<br>
 								영광 검정보리샌드 
 							</h5> -->
-							<div class="box-text-1">
-								<ul>
-									<li><b>• 판매 종류:</b> 일반 쌀·일반 현미·찹쌀·찹쌀현미</li>
-									<li><b>• 포장 단위:</b> 20kg·10kg·4kg</li>
-								</ul>
-							</div>
 							<div class="box-text-2">
 								<ul>
 									<li>
-										좋은 쌀의 시작은 ‘땅’에서 비롯됩니다. 또바기농원은 농약과 화학비료 사용을 최소화하고, 미생물이 살아 숨 쉬는  건강한 토양을 가꾸기 위해 퇴비 관리와 배수 정비, 자연 순환 농법을 실천하고 있습니다.
+										지리산 고로쇠 수액으로 간수를 빚어 만든 프리미엄 <strong>고로쇠된장, 고로쇠간장, 찹쌀고추장</strong>은 피아골의 자연과 전통 발효가 만들어낸 대표 장류입니다. 된장은 깊고 구수한 감칠맛이, 간장은 맑고 깔끔한 감칠맛이 살아나며, 찹쌀고추장은 은은한 단맛과 매콤함이 조화롭게 어우러집니다.
 									</li>
 									<li>
-										하루 한 끼, 가족이 먹는 밥 한 그릇을 생각하며 모내기부터 수확, 도정까지  모든 과정을 직접 관리합니다.
-									</li>
-									<li>
-										단백질 함량과 수분을 꼼꼼히 점검해 찰기와 윤기가 살아 있는 밥맛 좋은  이천쌀을 선보입니다.
+										고로쇠 <strong>우거지된장국</strong>은 구수한 우거지 향과 깊고 진한 된장 맛을 그대로 살려 한 끼 식사로 손색이 없으며, <strong>고로쇠 청국장찌개</strong>는 청국장의 진한 풍미에 고로쇠 수액 기반 장맛이 더해져 부담 없이 구수하고 담백한 맛을 완성합니다.  
 									</li>
 								</ul>
 							</div>
-							<div class="box-text-1">
+							<!-- <div class="box-text-1">
 								<ul>
 									<li><b>• 문의:</b> 진가정미소 010-8963-2332</li>
 								</ul>
-							</div>
+							</div> -->
 
 
-							<!-- <div class="dream-box-qr">
+							<div class="dream-box-qr">
 								<a href="https://smartstore.naver.com/jinaes" target="_blank">
 									<figure>
 										<img src="contents/sub_33_qr.jpg">
 									</figure>
-									<span>지내들영농조합법인</span>
+									<span>지리산피아골식품 <br>제품 보러 가기</span>
 								</a>
-							</div> -->
+							</div>
 						</div>
 
 					</article>
