--- a/sub_31.html
+++ b/sub_31.html
@@ -139,16 +139,20 @@
 				</div>
 				<div class="qr">
 					<div>
-						<figure>
-							<img src="contents/sub_31_qr_blog.png">
-						</figure>
-						<span>블로그</span>
+						<a href="https://blog.naver.com/everxiah" target="_blank">
+							<figure>
+								<img src="contents/sub_31_qr_blog.png">
+							</figure>
+							<span>블로그</span>
+						</a>
 					</div>
 					<div>
-						<figure>
-							<img src="contents/sub_31_qr_yt.png">
-						</figure>
-						<span>유튜브</span>
+						<a href="https://youtube.com/@cellopia" target="_blank">
+							<figure>
+								<img src="contents/sub_31_qr_yt.png">
+							</figure>
+							<span>유튜브</span>
+						</a>
 					</div>
 				</div>
 				<div class="article-text">
