--- a/sub_33.html
+++ b/sub_33.html
@@ -260,7 +260,7 @@
 
 
 							<div class="dream-box-qr">
-								<a href="https://smartstore.naver.com/jinaes" target="_blank">
+								<a href="https://www.jiripia.kr" target="_blank">
 									<figure>
 										<img src="contents/sub_33_qr.jpg">
 									</figure>
