--- a/sub_42.html
+++ b/sub_42.html
@@ -91,7 +91,7 @@
 							<span>구혜진</span>
 							<span class="pipe">ㅣ</span>
 							<span class="b">사진제공</span>
-							<span>올웨이즈 워케이션 센터 송도점・디어먼데이 시흥 르컬렉티브점・무의도 워케이션 센터・인천 이작 어촌체험휴양마을</span>
+							<span>부산 워케이션 거점센터・디어먼데이 경주 춘추관점・온앤오프・도동서원 한옥 워케이션</span>
 						</div>
 					</div>
 				</div>
@@ -106,10 +106,10 @@
 				</div>
 				<div class="hotple-title">
 					<h3 class="hotple-title-top">
-						도시 한가운데에서 찾는 몰입의 시간
+						항구도시에서 만나는 새로운 업무 방식
 					</h3>
 					<h3 class="hotple-title-bottom">
-						올웨이즈 워케이션 센터 송도점
+						부산 워케이션 거점센터
 					</h3>
 					<figure>
 						<img src="contents/sub_42_top_1.jpg">
@@ -118,8 +118,8 @@
 				<div class="hotple-text">
 					<div class="hotple-text-left">
 						<p>
-							시간과 공간의 제약 없이 일과 휴식을 이어가고 싶다면 올웨이즈 워케이션 센터 송도점이 좋은 선택이 될 수 있다. 24시간 출입이 가능해 각자의 라이프스타일에 맞춰 자유롭게 근무할 수 있다.<br>
-							흰색과 우드톤의 따뜻한 인테리어로 집중과 휴식을 동시에 도우며, 개인  집중석부터 팀 회의실, 라운지, 휴식 공간까지 다양한 업무 환경이 마련되어 있다. 또한 독서 모임, 피크닉, 자기계발 모임 등 소규모 커뮤니티 활동이 운영돼 업무 외 영감의 시간을 가질 수 있다. 수도권 어디서든 접근성이 좋고, 하루, 일주일, 한 달 단위 선택이 가능해 직장인, 프리랜서, 스타트업 팀 등 다양한 이용자에게 적합하다. 
+							부산항이 내려다보이는 오션뷰와 옛 도심의 정취를 느낄 수 있는 시티뷰, 두 가지 매력을 모두 즐길 수 있는 부산 워케이션 거점센터. 약 60명이 동시에 이용할 수 있는 규모로, 1인 전용 업무 공간은 물론, 테라스·화상 회의실 등 다양한 시설이 마련되어 있다. 라운지에서는 업무와 함께 자유로운 네트워킹이 가능하다. <br>
+							또한 부산형 워케이션 프로그램은 거점센터 외에도 여러 위성센터와 파트너십 공간을 자유롭게 이용할 수 있도록 운영된다. 중구·동구·서구·영도구·금정구 등 지역별로 연계된 숙박시설을 통해 장기 체류형 근무도 가능해, 일과 여행이 자연스럽게 어우러지는 부산 만의 워케이션 환경을 제공한다. 
 							<i class="icon_last"></i>
 						</p>
 						<div class="hotple-image">
@@ -135,39 +135,39 @@
 						<div>
 							<div class="hotple-info info-location">
 								<h5>
-									올웨이즈 워케이션 센터 송도점
+									부산 워케이션 거점센터
 								</h5>
 								<ul>
 									<li>
 										<span>주소</span>
-										인천 연수구 인천타워대로 301 A동 36층 3620호
+										부산광역시 동구 중앙대로 214번길  7-8 24층
 									</li>
 									<li>
 										<span>인접 교통</span>
-										국제업무지구역(도보 7분)
+										부산역(도보 3분)
 									</li>
 									<li>
 										<span>오피스 현황</span>
-										1인석, 회의실, 라운지 등
+										수용인원 60명
 									</li>
 								</ul>
 							</div>
 							<div class="hotple-info info-tour">
 								<h5>주변 여행지</h5>
 								<h6>
-									송도 센트럴파크
+									깡깡이예술마을
 								</h6>
 								<p>
-									도심 한가운데 자리한 대규모 공원으로 수로와 산책로가 잘 조성돼 있다. 
+									조선소 노동자들이 배의 녹을 제거하며 내던 ‘깡깡’ 소리가 울려 퍼지던 그곳이, 페인팅 아트, 라이트 프로젝트 등 예술과 문화 공간으로 재탄생했다.
 								</p>
 							</div>
 						</div>
 						<div class="hotple-info-qr">
 							<figure>
-								<a href="https://www.instagram.com/always_wocation" target="_blank"><img src="contents/sub_42_qr_1.jpg"></a>
+								<a href="https://www.busaness.com" target="_blank"><img src="contents/sub_42_qr_1.jpg"></a>
 							</figure>
 							<span>
-								인스타그램
+								홈페이지
 							</span>
 						</div>
 					</div>
@@ -181,10 +181,10 @@
 				</div>
 				<div class="hotple-title">
 					<h3 class="hotple-title-top">
-						근교에서 누리는 리조트형 워케이션
+						전통과 현대가 만나는
 					</h3>
 					<h3 class="hotple-title-bottom">
-						디어먼데이 시흥 르컬렉티브점
+						디어먼데이 경주 춘추관점
 					</h3>
 					<figure>
 						<img src="contents/sub_42_top_2.jpg">
@@ -193,8 +193,8 @@
 				<div class="hotple-text">
 					<div class="hotple-text-left">
 						<p>
-							멀리 떠나지 않아도 색다른 워케이션을 즐기고 싶다면 경기도 시흥 디어먼데이 르컬렉티브점을 방문해 보자. 서울과 가까워 접근성이 뛰어나면서도 리조트형 공간에서 일과 휴식을 동시에 경험할 수 있다.<br>
-							24시간 이용 가능한 업무 공간에는 개인 데스크와 4인 회의실이 마련돼 있으며, 허먼밀러 의자와 듀얼 모니터, 복합기, 케이블 등 전문적인 업무 환경이 갖춰져 있어 장시간 집중에도 무리가 없다. 숙소는 르컬렉티브 웨이브 파크 내 객실을 활용하며, 파노라마 풀과 프라이빗 스파, 조리 시설이 완비돼 있다. 하루쯤 업무 리듬을 바꾸고 싶거나, 짧은 일정으로 새로운 워케이션을 시도하고 싶다면 디어먼데이 시흥 르컬렉티브점을 찾아가 보자. 
+							황리단길 인근에 위치한 디어먼데이 경주는 전통 한옥 속에서 일과 휴식을 동시에 누릴 수 있는 워케이션 공간이다. 업무 공간은 전 좌석 모션데스크를 갖추고, 총 11석 규모의 워케이션 라운지에는 전 좌석 모니터, 6인 회의실, 스피커, 마이크, 케이블 젠더 등 업무 장비가 완비되어 있다. 복합기(인쇄, 복사, 스캔), 커피추출기, 정수기가 갖춰진 편의시설은 물론, 업무 중 휴식을 위한 빈백과 야외 테이블도 마련되어 있다.<br>
+							업무 공간에서 도보 1분 거리의 전통 한옥 숙소는 인원에 따라 숙박할 수 있으며, 한옥 특유의 운치를 느낄 수 있다. 업무를 마친 후에는 인근 황리단길을 산책하며 경주의 트렌디한 카페와 맛집을 탐방하거나, 천년 고도의 역사 유적지를 둘러보며 문화적 영감을 얻을 수 있다. 
 							<i class="icon_last"></i>
 						</p>
 						<div class="hotple-image">
@@ -210,36 +210,36 @@
 						<div>
 							<div class="hotple-info info-location">
 								<h5>
-									디어먼데이 시흥 르컬렉티브점
+									디어먼데이 경주 워케이션 라운지
 								</h5>
 								<ul>
 									<li>
 										<span>주소</span>
-										경기 시흥시 거북섬로 135 르컬렉티브 웨이브파크 1층
+										경상북도 경주시 대경로 4821-5, 경주 춘추관
 									</li>
 									<li>
 										<span>인접 교통</span>
-										정왕역(차량 23분)
+										경주역(차량 11분)
 									</li>
 									<li>
 										<span>오피스 현황</span>
-										15석
+										11석
 									</li>
 								</ul>
 							</div>
 							<div class="hotple-info info-tour">
 								<h5>주변 여행지</h5>
 								<h6>
-									시흥 갯골생태공원
+									무열왕릉
 								</h6>
 								<p>
-									수도권에서 보기 드문 내만 갯골이 보존된 곳으로, 갈대숲과 산책로가 잘 정비돼 있다. 늦가을이면 억새와 갈대가 어우러져 산책하기 좋다.
+									넓고 탁 트인 공간에 커다란 구릉들이 있어 고즈넉하게 산책할 수 있다.
 								</p>
 							</div>
 						</div>
 						<div class="hotple-info-qr">
 							<figure>
-								<a href="https://dearmonday.io/reservation/list/2224" target="_blank"><img src="contents/sub_42_qr_2.jpg"></a>
+								<a href="https://dearmonday.io/branch/list/5" target="_blank"><img src="contents/sub_42_qr_2.jpg"></a>
 							</figure>
 							<span>
 								홈페이지
@@ -256,10 +256,10 @@
 				</div>
 				<div class="hotple-title">
 					<h3 class="hotple-title-top">
-						섬에서 일과 휴식을 동시에
+						도심과 바다 사이,
 					</h3>
 					<h3 class="hotple-title-bottom">
-						무의도 워케이션 센터
+						울산 동구 워케이션 센터 온앤오프
 					</h3>
 					<figure>
 						<img src="contents/sub_42_top_3.jpg">
@@ -268,8 +268,8 @@
 				<div class="hotple-text">
 					<div class="hotple-text-left">
 						<p>
-							도심을 벗어나 섬에서 여유와 집중을 동시에 누릴 수 있는 무의도 워케이션 센터. 인천 영종도의 네스트호텔과 무의도 더휴일×데스커 워케이션 센터가 함께하는 이 프로그램은 숙박, 업무, 체험이 유기적으로 연결되어 있어 일과 휴식의 균형을 새롭게 경험할 수 있다. 개인 파티션 테이블, 스탠딩 테이블, 라운지, 듀얼모니터, 빔프로젝터 등 업무에 필요한 시설이 충실하게 마련되어 있고, 워케이션 파트너가 상주해 처음 방문하는 이들도 불편함 없이 업무에 몰입할 수 있다. <br>
-							갯벌 체험, 조개 공예 체험 등 지역의 자연과 문화를 몸소 느낄 수 있는 체험이 있어 머리를 식히며 새로운 영감을 얻기에 더없이 좋은 기회다. 
+							울산 최초의 워케이션 센터로, 효율적인 업무 환경과 휴식을 모두 고려한 다양한 공간을 갖추고 있다. 센터에는 1인용 부스 15석과 독립된 프라이빗룸 2개, 팀 단위 협업이 가능한 회의실이 마련되어 있다. 듀얼 모니터, 프린터, 복합기 등 업무에 필요한 장비가 완비되어 있으며, 탕비실에는 냉장고, 커피머신 등 편의시설이 갖춰져 있다.<br>
+							또한 월 2회 운영되는 ‘온앤오프데이(ON&OFF Day)’ 프로그램에서는 다양한 분야의 전문가를 초청해 자기계발, 업무 역량 향상, 힐링을 주제로 한 강의와 체험이 진행되며, 울산 워케이션 대표 거점으로 자리매김하고 있다. 무엇보다 일과 쉼을 자유롭게 즐겨볼 수 있는 울산만의 워케이션 명소로 사랑받고 있다. 
 							<i class="icon_last"></i>
 						</p>
 						<div class="hotple-image">
@@ -280,28 +280,25 @@
 								<img src="contents/sub_42_image_32.jpg">
 							</figure>
 						</div>
-						<div class="description">
-							* 해당 프로그램은 해양수산부와 한국어촌어항공단이 함께 추진하는 어촌마을 워케이션 사업의 일환으로 마련되었습니다.
-						</div>
 					</div>
 					<div class="hotple-text-right">
 						<div>
 							<div class="hotple-info info-location">
 								<h5>
-									무의도 더휴일×데스커 워케이션 센터
+									울산 동구 워케이션 센터 온앤오프
 								</h5>
 								<ul>
 									<li>
 										<span>주소</span>
-										인천 중구 대무의로301번길 19-16
+										울산 동구 해수욕장10길 38 5층
 									</li>
 									<li>
 										<span>인접 교통</span>
-										인천공항1터미널역(차량 18분)
+										태화강역(차량 20분)
 									</li>
 									<li>
 										<span>오피스 현황</span>
-										오픈 라운지 17석, 개인 파티션 테이블 4석, 스탠딩 테이블 2석
+										1인 부스 15석, 프라이빗룸 2석, 8인&12인 회의실
 									</li>
 								</ul>
 							</div>
@@ -310,16 +307,16 @@
 									주변 여행지
 								</h5>
 								<h6>
-									실미도 해변
+									대왕암공원
 								</h6>
 								<p>
-									영화 촬영지로 알려진 해변으로 조수 간만의 차가 크고 완만한 백사장이 펼쳐져 여유롭게 산책하기 좋다. 
+									신라 문무왕의 전설이 깃든 바위섬을 품은 해안 공원. 산책로와 등대가 어우러진 일출 명소다. 
 								</p>
 							</div>
 						</div>
 						<div class="hotple-info-qr">
 							<figure>
-								<a href="https://thehyuil.co.kr/programs/incheon-yeongjong/7" target="_blank"><img src="contents/sub_42_qr_3.jpg"></a>
+								<a href="https://ulsanworkation.com" target="_blank"><img src="contents/sub_42_qr_3.jpg"></a>
 							</figure>
 							<span>
 								홈페이지
@@ -336,10 +333,10 @@
 				</div>
 				<div class="hotple-title">
 					<h3 class="hotple-title-top">
-						섬 마을에서 찾는 소박한 쉼
+						선비의 정신이 머무는 공간에서 일하고 사색하는
 					</h3>
 					<h3 class="hotple-title-bottom">
-						인천 이작 어촌 체험 휴양 마을 워케이션
+						도동서원 한옥 워케이션
 					</h3>
 					<figure>
 						<img src="contents/sub_42_top_4.jpg">
@@ -348,8 +345,8 @@
 				<div class="hotple-text">
 					<div class="hotple-text-left">
 						<p>
-							풍경이 아름다운 섬, 대이작도. 이작 어촌 체험 휴양 마을에서는 펜션과 공유 사무실, 다양한 어촌 체험이 어우러져 평범한 일상에서 벗어나 영감의 시간을 가질 수 있다. <br>
-							업무 공간은 마을 내 공유 오피스로 약 20석 규모로 듀얼 모니터와 고속 와이파이, 워케이션 파트너 상주로 안정적인 근무 환경을 제공한다. 숙소는 해림·아라·우리민박펜션 등 다양한 형태로 마련돼 있으며 와이파이, 에어컨, 취사도구 등 생활에 필요한 기본 설비가 갖춰져 장기 체류에도 불편함이 없다. 무엇보다 이작 어촌 체험 휴양 마을에서는 바지락 캐기와 같은 체험과 바닷길을 따라 걷는 산책 코스로 섬 특유의 고즈넉한 분위기를 만끽할 수 있다. 
+							세계문화유산으로 등재된 도동서원 옆, 도동유교문화원의 한옥 워케이션은 역사와 자연, 일과 휴식을 모두 아우르는 특별한 워케이션 프로그램이다. 공유 사무실은 무료로 이용할 수 있으며, 듀얼 모니터, 인터넷, 회의실 등 기본적인 업무 환경이 갖춰져 있다. <br>
+							가족형 워케이션에 최적화되어 부모가 업무나 휴식에 집중하는 동안, 자녀는 전문 강사와 함께 비슬산 숲 체험, 문화관광해설사와 함께하는 서원 탐방, 자연과 곤충 체험 등 다양한 무료 체험 프로그램에 참여할 수 있다. 저녁에는 한옥 숙소에서 고즈넉한 마당을 바라보며 하루의 피로를 풀고, 전통의 운치 속에서 온전한 휴식을 누릴 수 있다. 400년 역사의 은행나무가 지키는 도동서원 워케이션에서 일과 휴식의 균형을 찾길 바란다. 
 							<i class="icon_last"></i>
 						</p>
 						<div class="hotple-image">
@@ -360,28 +357,28 @@
 								<img src="contents/sub_42_image_42.jpg">
 							</figure>
 						</div>
-						<div class="description">
+						<!-- <div class="description">
 							* 해당 프로그램은 해양수산부와 한국어촌어항공단이 함께 추진하는 어촌마을 워케이션 사업의 일환으로 마련되었습니다.
-						</div>
+						</div> -->
 					</div>
 					<div class="hotple-text-right">
 						<div>
 							<div class="hotple-info info-location">
 								<h5>
-									대이작도어촌체험마을 공유오피스
+									도동유교문화관
 								</h5>
 								<ul>
 									<li>
 										<span>주소</span>
-										인천 옹진군 대이작로 78
+										대구 달성군 구지면 구지서로 716
 									</li>
 									<li>
 										<span>인접 교통</span>
-										인천항연안여객터미널 (여객선 이동)
+										서대구역(차량 45분)
 									</li>
 									<li>
 										<span>오피스 현황</span>
-										오픈라운지 20석 
+										사전 예약 필수
 									</li>
 								</ul>
 							</div>
@@ -390,16 +387,16 @@
 									주변 여행지
 								</h5>
 								<h6>
-									대이작도 풀등 모래섬
+									도동서원
 								</h6>
 								<p>
-									물때에 따라 바닷길이 열리며 걸어 들어갈 수 있는 무인도. 독특한 지형과 아름다운 해변이 어우러져 색다른 체험을 선사한다. 
+									가을이면 노랗게 물든 큰 은행나무가 서원을 감싸며, 조용히 걷기 좋은 한적한 공간이다. 
 								</p>
 							</div>
 						</div>
 						<div class="hotple-info-qr">
 							<figure>
-								<a href="https://thehyuil.co.kr/programs/incheon-ijak/2?tab=accommodation" target="_blank"><img src="contents/sub_42_qr_4.jpg"></a>
+								<a href="https://www.dsworcation.com/page/program_3.php" target="_blank"><img src="contents/sub_42_qr_4.jpg"></a>
 							</figure>
 							<span>
 								홈페이지
