--- a/sub_43.html
+++ b/sub_43.html
@@ -110,12 +110,12 @@
 						<div class="article-meta">
 							<span class="b">글</span>
 							<span>구혜진</span>
-							<span class="pipe">ㅣ</span>
+							<!-- <span class="pipe">ㅣ</span> --><br>
 							<span class="b">사진 제공</span>
-							<span>대전광역시 농업기술센터, 부산광역시 농업기술센터</span>
-							<span class="pipe">ㅣ</span>
+							<span>제주특별자치도 농업기술센터, 강원특별자치도 농업기술원</span>
+							<!-- <span class="pipe">ㅣ</span> --><br>
 							<span class="b">자료 도움</span>
-							<span>농촌자원과 김진주 농촌지도사</span>
+							<span>농촌자원과 전영삼 농촌지도관, 김진주 농촌지도사</span>
 						</div>
 					</div>
 				</div>
@@ -131,10 +131,10 @@
 			</div>
 			<div class="farm-box headling-farm">
 				<h3>
-					대전광역시 치유농업센터
+					제주특별자치도 치유농업센터
 				</h3>
 				<h4>
-					행복 농장 & 케어팜
+					제주에서 전하는 맞춤형 초록 프로그램
 				</h4>
 				<div class="farm-image-top">
 					<figure>
@@ -152,25 +152,31 @@
 				<div class="farm-grid">
 					<div class="farm-text">
 						<blockquote class="quote-farm">
-							단순히 식물을 심는 경험을 넘어, 자연이 주는 리듬 안에서<br>
-							마음을 회복하는 시간을 갖는다.
+							잔디밭을 맨발로 걸으며 따스한 햇살을 느끼고,<br>
+							다양한 체험을 통해 자연과 교감하는 시간을 갖는다.
 						</blockquote>
 						<h6>
-							도심 속 나만의 밭에서 찾는 일상의 치유
+							제주의 자연에서 만나는 치유의 시간
 						</h6>
 						<p>
-							도심 속에서도 흙내음 가득한 삶을 만날 수 있다면 어떨까. 대전광역시 농업기술센터가 운영하는 행복농장과 케어팜은 바쁜 일상에 지친 시민들에게 작은 쉼표 같은 공간을 선물한다.
+							제주 서귀포시 남원읍에 위치한 제주특별자치도 치유농업센터에서는 제주의 자연을 그대로 담은 치유 프로그램이 운영되고 있다. 잔디밭 위에서 어르신들이 맨발로 풀을 밟으며 직접 심은 꽃이 얼마나 자랐는지 살펴보고, 꽃잎으로 자신의 이름을 써보는 풍경이 일상처럼 펼쳐진다.
 						</p>
 						<p>
-							행복농장은 시민들이 직접 텃밭을 가꾸며 계절의 변화를 몸으로 느낄 수 있는 공간이다. 매년 봄, 대전 시민이라면 누구나 신청할 수 있으며 면적별로 20㎡ 구획 45개, 10㎡ 구획 65개로 구성되어 있다. 상추, 고추, 배추 같은 작물을 직접 심고 수확하다 보면 먹거리를 얻는 것은 물론, 흙을 만지는 과정에서 마음이 차분해지고 한 주의 피로가 자연스레 풀린다. 가족과 함께 와서 아이들에게 자연을 경험하게 하려는 이들도 많다. 함께 물을 주고 김을 매며 대화를 나누는 시간이 일상의 소소한 행복이자 따뜻한 치유가 된다.
+							제주특별자치도 농업기술원은 2023년부터 ‘제주치유농업센터’를 본격적으로 운영 중이다. 서귀포 농업기술센터 내 499㎡ 규모로 조성된 이곳은 치유농업 서비스 제공, 전문가 양성 교육, 사회복지시설 협업 등 인적·물적 네트워크의 구심점 역할을 맡고 있다.
 						</p>
 						<p>
-							케어팜은 취약계층을 위한 치유 프로그램을 집중적으로 운영한다. 도시농업 전문가와 함께하는 가족 텃밭 치유농업 활동은 원예 활동을 통해 정서적 안정을 돕는다. 단순히 식물을 심는 경험을 넘어, 자연이 주는 리듬 속에서 마음을 회복하는 시간을 갖는다. 
+							센터는 텃밭과 실습 체험장을 갖추고 대상별 맞춤형 프로그램을 다양하게 운영한다. 치매 노인을 위한 ‘초록쉼터’, 장애 아동과 함께하는 ‘텃밭 정원 이야기’, 학교 밖 청소년 대상의 ‘초록노트–식물관찰의 미학’, 모두를 위한 ‘초록다방’ 등 참여자의 특성에 맞춘 세심한 프로그램이 준비되어 있다. 
+						</p>
+						<p>
+							제주만의 청정한 자연환경과 농업 자원을 활용한 치유 프로그램은 지역 농업과 관광 산업에 새로운 활력을 불어넣고 있다.
 							<i class="icon_last"></i>
 						</p>
 						<div class="farm-image-last">
 							<figure>
 								<img src="contents/sub_43_image_5.jpg">
+							</figure>
+							<figure>
+								<img src="contents/sub_43_image_6.jpg">
 							</figure>
 						</div>
 					</div>
@@ -179,11 +185,11 @@
 							<h6>Information</h6>
 							<p>
 								<span>주소</span><br>
-								대전광역시 유성구 교촌대정로 97
+								제주특별자치도 서귀포시 남원읍 중산간동로 7433-23
 							</p>
 							<p>
 								<span>문의</span><br>
-								042-270-6982
+								064-760-7523
 							</p>
 							<!-- <p>
 								<span>프로그램 가격(예상)</span><br>
@@ -207,10 +213,10 @@
 			</div>
 			<div class="farm-box pet-farm">
 				<h3>
-					부산광역시 치유농업센터
+					강원특별자치도 농업기술원
 				</h3>
 				<h4>
-					우리 가족 치유농업 서비스
+					강원의 자연과 먹거리가 전하는 치유의 시간
 				</h4>
 				<div class="farm-image-top">
 					<figure>
@@ -228,31 +234,28 @@
 				<div class="farm-grid">
 					<div class="farm-text">
 						<blockquote class="quote-farm">
-							작은 씨앗을 심듯, 식물과의 만남이 시민의 마음에도 <br>
-							따뜻한 변화의 싹을 틔우길 기대한다. 
+							숲을 거닐며 깊은 숨을 들이쉬고,<br>
+							자연 속에서 몸과 마음의 균형을 회복하도록 돕는다.
 						</blockquote>
 						<h6>
-							우리 가족의 든든한 치유 서비스
+							강원 청정 자연이 선물하는 치유의 힘
 						</h6>
 						<p>
-							부산광역시 농업기술센터는 올해부터 시민들을 위한 ‘우리 가족 치유농업 서비스’를 운영하고 있다. 치유농업사 자격을 가진 전문가들의 지도로 식물과 교감하며 정서적 안정을 찾는 프로그램이다. 대상에 따라 두 가지 과정으로 구성되며, 각 과정은 3월부터 6월까지 총 16회에 걸쳐 진행된다. 정서적 안정, 심리적 치유, 스트레스 해소 등 농업 활동의 치유 효과를 안내하고 실질적인 도움을 제공한다.
+							강원도 하면 떠오르는 것은 맑은 공기, 시원한 바람, 그리고 푸른 산이다. 이러한 강원의 청정 자연이 곧 치유의 자원이 되었다. 태백산맥의 깨끗한 공기와 숲길을 활용한 ‘호흡기 건강 치유 프로그램’은 참여자들이 숲을 거닐며 깊은 숨을 들이쉬고, 자연 속에서 몸과 마음의 균형을 회복하도록 돕는다.
 						</p>
 						<p>
-							성인을 위한 과정은 우울증이나 스트레스를 겪고 있는 참여자들을 대상으로 진행된다. 흙을 만지고 작물을 기르는 활동을 통해 마음을 치유하고, 삶의 질을 한층 더 높이는 시간을 선물한다.
+							강원특별자치도는 2017년 전국 최초로 치유농업 조례를 제정한 뒤 치매안심센터, 복지센터 등 다양한 기관과 협력해 치유 서비스를 꾸준히 확장해오고 있다. 현재 강원특별자치도 농업기술원은 ‘치유농업 광역거점센터’를 건립 중이며, 프로그램 개발·운영·보급, 전문가 양성, 유관기관 협력, 플랫폼 구축 등 치유농업의 전 과정을 포괄하는 거점기관으로 발전하고 있다.
 						</p>
 						<p>
-							아동을 위한 과정은 학업이나 가정에서 쌓이는 심리적 부담을 덜어주는 프로그램이다. 아이들은 즐겁게 뛰어놀며 안정감을 되찾고, 스스로에 대한 자존감도 키울 수 있다.
-						</p>
-						<p>
-							자연과 함께하는 치유의 힘을 통해 시민들이 일상 속에서 마음의 여유와 활력을 되찾을 수 있도록 앞으로도 다양한 프로그램을 이어갈 예정이다. 작은 씨앗을 심듯, 식물과의 만남이 시민들의 마음에도 따뜻한 변화의 싹을 틔우길 기대한다. 
+							또한 지역 특산물인 옥수수를 활용한 프로그램도 개발 중이다. 60세 이상 어르신들이 옥수수를 이용한 다양한 활동을 통해 인지 능력을 높이고 손 근육을 강화하는 등, 지역 농산물이 치유의 도구로 활용되고 있다. 강원특별자치도 농업기술원은 농업이 단순히 먹거리를 생산하는 단계를 넘어, 사람들의 건강과 행복을 돌보는 ‘치유농업’의 중심지로 자리매김하고 있다. 
 							<i class="icon_last"></i>
 						</p>
 						<div class="farm-image-last">
 							<figure>
-								<img src="contents/sub_43_image_6.jpg">
+								<img src="contents/sub_43_image_7.jpg">
 							</figure>
 							<figure>
-								<img src="contents/sub_43_image_7.jpg">
+								<img src="contents/sub_43_image_8.jpg">
 							</figure>
 						</div>
 					</div>
@@ -261,11 +264,11 @@
 							<h6>Information</h6>
 							<p>
 								<span>주소</span><br>
-								부산광역시 강서구 공항로 1285
+								강원도 춘천시 신북읍 장본길 40
 							</p>
 							<p>
-								<span>예약 문의</span><br>
-								051-970-3744
+								<span>문의</span><br>
+								033-248-6154
 							</p>
 							<!-- <p>
 								<span>프로그램 가격(예상)</span><br>
